Results/Tamaulipas/forecast/experiments/exp09_regiones/v2/summary.md
# exp09_regiones — v2

Región **Fronteriza** — franja del Río Bravo; la más rota de origen — el 53 % de sus vecinos caen en Texas o el Golfo, fuera de la malla descargada. Entrena sobre la región + halo de 3 celdas (~13 km) y evalúa solo sobre la región, para no degradar los vecindarios espaciales en el borde. Feature-set de exp07 v4; float32 para que quepa en RAM.

- Alcance: 928 nodos evaluados + 78 de halo (entrenan, no puntúan) — bloque `region_fronteriza_halo3` | feature-set: `base-nocturno-viento-cielo-nubes-adveccion-adveccion_upwind_r23` (64 features) | best_iteration: 275
- Bloques: ['base', 'nocturno', 'viento', 'cielo', 'nubes', 'adveccion', 'adveccion_upwind_r23'] | modelo: xgboost | cuantiles: —

**Test global (P50 si cuantílico):** RMSE 74.80 vs persistence 87.61 W/m² · skill 0.1463 · R² 0.928

## Métricas globales (val + test)

| segmento         |       n |   RMSE_persistence |   RMSE_modelo |   MAE_modelo |   MBE_modelo |   R2_persistence |   R2_modelo |   skill | split   |
|:-----------------|--------:|-------------------:|--------------:|-------------:|-------------:|-----------------:|------------:|--------:|:--------|
| global           | 3810430 |             81.387 |        69.993 |       38.125 |        1.532 |            0.922 |       0.942 |   0.14  | val     |
| limpio_ff0       | 3438484 |             81.991 |        70.512 |       38.204 |        0.518 |            0.917 |       0.938 |   0.14  | val     |
| rellenado_ff_pos |  371946 |             75.576 |        64.996 |       37.393 |       10.905 |            0.847 |       0.887 |   0.14  | val     |
| global           | 3818812 |             87.614 |        74.797 |       42.78  |        2.033 |            0.901 |       0.928 |   0.146 | test    |
| limpio_ff0       | 3452116 |             88.435 |        75.47  |       43.362 |        1.974 |            0.893 |       0.922 |   0.147 | test    |
| rellenado_ff_pos |  366696 |             79.467 |        68.136 |       37.305 |        2.587 |            0.842 |       0.884 |   0.143 | test    |

## Por régimen de nubosidad (test)

| regimen_nubosidad   |       n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------|--------:|--------------:|-------------------:|-------------:|------------:|--------:|
| cubierto (kt<0.3)   |  240953 |       135.938 |            132.813 |       96.022 |      -3.663 |  -0.024 |
| parcial (0.3-0.7)   |  662317 |       112.436 |            130.347 |       82.019 |       0.522 |   0.137 |
| despejado (kt>=0.7) | 2915542 |        54.118 |             68.826 |       29.466 |       0.959 |   0.214 |

## Por régimen de rampa (test)

| regimen_rampa             |       n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------------|--------:|--------------:|-------------------:|-------------:|------------:|--------:|
| rampa suave (<0.1)        | 2660955 |        38.689 |             22.704 |       21.886 |       0.981 |  -0.704 |
| rampa moderada (0.1-0.25) |  719324 |        90.949 |            104.391 |       70.785 |       0.863 |   0.129 |
| rampa fuerte (>0.25)      |  437605 |       161.618 |            214.306 |      123.826 |       0.528 |   0.246 |

## Skill por nodo (modelo pooled, test)

skill medio 0.1461 · min 0.0597 · max 0.1931 (928 nodos)

|   nodo_id |    n |   RMSE_modelo |   RMSE_persistence |   R2_modelo |   skill |
|----------:|-----:|--------------:|-------------------:|------------:|--------:|
|      3397 | 4119 |        72.058 |             81.193 |       0.935 |   0.113 |
|      3398 | 4118 |        75.471 |             86.34  |       0.929 |   0.126 |
|      3419 | 4117 |        73.085 |             84.056 |       0.933 |   0.131 |
|      3420 | 4118 |        73.327 |             82.759 |       0.933 |   0.114 |
|      3421 | 4119 |        71.742 |             80.904 |       0.935 |   0.113 |
|      3422 | 4119 |        72.783 |             82.277 |       0.933 |   0.115 |
|      3423 | 4117 |        73.104 |             83.516 |       0.932 |   0.125 |
|      3442 | 4119 |        74.578 |             87.75  |       0.928 |   0.15  |
|      3443 | 4118 |        73.744 |             85.599 |       0.93  |   0.138 |
|      3444 | 4118 |        73.654 |             83.482 |       0.932 |   0.118 |
|      3445 | 4118 |        76.53  |             84.373 |       0.926 |   0.093 |
|      3446 | 4119 |        73.325 |             83.864 |       0.931 |   0.126 |
|      3447 | 4119 |        73.505 |             84.432 |       0.93  |   0.129 |
|      3448 | 4118 |        73.44  |             83.242 |       0.932 |   0.118 |
|      3449 | 4119 |        76.571 |             87.186 |       0.926 |   0.122 |
|      3450 | 4118 |        77.405 |             89.382 |       0.924 |   0.134 |
|      3451 | 4119 |        75.019 |             82.579 |       0.929 |   0.092 |
|      3452 | 4118 |        73.157 |             81.914 |       0.934 |   0.107 |
|      3466 | 4118 |        78.199 |             91.466 |       0.919 |   0.145 |
|      3467 | 4117 |        75.63  |             88.955 |       0.924 |   0.15  |
|      3468 | 4116 |        77.417 |             88.72  |       0.921 |   0.127 |
|      3469 | 4119 |        74.862 |             87.158 |       0.927 |   0.141 |
|      3470 | 4118 |        76.036 |             89.231 |       0.925 |   0.148 |
|      3471 | 4118 |        73.48  |             84.451 |       0.931 |   0.13  |
|      3472 | 4117 |        73.17  |             84.558 |       0.932 |   0.135 |
|      3473 | 4118 |        75.333 |             87.308 |       0.926 |   0.137 |
|      3474 | 4119 |        78.511 |             91.526 |       0.919 |   0.142 |
|      3475 | 4119 |        74.057 |             86.064 |       0.929 |   0.14  |
|      3476 | 4119 |        74.828 |             85.521 |       0.929 |   0.125 |
|      3477 | 4118 |        78.835 |             91.167 |       0.92  |   0.135 |
|      3478 | 4119 |        78.55  |             90.724 |       0.92  |   0.134 |
|      3479 | 4120 |        77.012 |             90.215 |       0.924 |   0.146 |
|      3480 | 4118 |        70.909 |             79.968 |       0.937 |   0.113 |
|      3486 | 4117 |        73.528 |             86.68  |       0.929 |   0.152 |
|      3487 | 4117 |        74.897 |             86.795 |       0.927 |   0.137 |
|      3488 | 4117 |        75.083 |             88.164 |       0.926 |   0.148 |
|      3489 | 4117 |        74.327 |             85.88  |       0.927 |   0.135 |
|      3490 | 4117 |        74.22  |             88.277 |       0.927 |   0.159 |
|      3491 | 4117 |        74.907 |             89.829 |       0.926 |   0.166 |
|      3492 | 4118 |        77.281 |             92.191 |       0.921 |   0.162 |
|      3493 | 4117 |        79.17  |             93.483 |       0.917 |   0.153 |
|      3494 | 4117 |        77.371 |             91.035 |       0.921 |   0.15  |
|      3495 | 4117 |        78.069 |             91.771 |       0.92  |   0.149 |
|      3496 | 4119 |        76.467 |             88.848 |       0.923 |   0.139 |
|      3497 | 4118 |        74.294 |             86.161 |       0.928 |   0.138 |
|      3498 | 4118 |        74.295 |             87.811 |       0.928 |   0.154 |
|      3499 | 4117 |        75.473 |             88.858 |       0.925 |   0.151 |
|      3500 | 4118 |        75.728 |             88.787 |       0.923 |   0.147 |
|      3501 | 4119 |        77.542 |             88.771 |       0.919 |   0.126 |
|      3502 | 4119 |        72.229 |             84.264 |       0.932 |   0.143 |
|      3503 | 4120 |        76.781 |             87.79  |       0.924 |   0.125 |
|      3504 | 4117 |        74.609 |             87.104 |       0.928 |   0.143 |
|      3505 | 4119 |        75.868 |             88.311 |       0.926 |   0.141 |
|      3506 | 4118 |        75.374 |             87.445 |       0.928 |   0.138 |
|      3507 | 4118 |        75.925 |             88.892 |       0.927 |   0.146 |
|      3508 | 4120 |        72.109 |             80.368 |       0.935 |   0.103 |
|      3509 | 4117 |        74.499 |             83.393 |       0.931 |   0.107 |
|      3510 | 4116 |        74.943 |             85.629 |       0.93  |   0.125 |
|      3511 | 4117 |        72.987 |             84.773 |       0.934 |   0.139 |
|      3514 | 4117 |        73.566 |             85.954 |       0.93  |   0.144 |
|      3515 | 4117 |        72.1   |             84.297 |       0.932 |   0.145 |
|      3517 | 4118 |        73.124 |             85.891 |       0.93  |   0.149 |
|      3518 | 4118 |        73.032 |             86.021 |       0.93  |   0.151 |
|      3519 | 4117 |        75.037 |             88.29  |       0.926 |   0.15  |
|      3520 | 4117 |        77.315 |             89.888 |       0.921 |   0.14  |
|      3521 | 4117 |        76.864 |             90.526 |       0.922 |   0.151 |
|      3522 | 4117 |        75.596 |             90.014 |       0.924 |   0.16  |
|      3523 | 4117 |        77.637 |             92.893 |       0.92  |   0.164 |
|      3524 | 4117 |        76.686 |             91.94  |       0.922 |   0.166 |
|      3525 | 4117 |        76.742 |             91.185 |       0.922 |   0.158 |
|      3526 | 4117 |        78.148 |             93.296 |       0.92  |   0.162 |
|      3527 | 4117 |        76.208 |             89.09  |       0.923 |   0.145 |
|      3528 | 4119 |        74.804 |             88.193 |       0.926 |   0.152 |
|      3529 | 4117 |        75.219 |             87.679 |       0.925 |   0.142 |
|      3530 | 4117 |        72.934 |             85.451 |       0.928 |   0.146 |
|      3531 | 4118 |        76.862 |             89.365 |       0.919 |   0.14  |
|      3532 | 4116 |        76.727 |             90.798 |       0.92  |   0.155 |
|      3533 | 4118 |        73.294 |             83.916 |       0.929 |   0.127 |
|      3534 | 4120 |        73.465 |             85.641 |       0.929 |   0.142 |
|      3535 | 4117 |        78.307 |             91.989 |       0.919 |   0.149 |
|      3536 | 4118 |        77.18  |             91.649 |       0.921 |   0.158 |
|      3537 | 4118 |        76.504 |             89.237 |       0.921 |   0.143 |
|      3538 | 4119 |        74.913 |             80.501 |       0.929 |   0.069 |
|      3539 | 4120 |        73.503 |             78.17  |       0.933 |   0.06  |
|      3540 | 4117 |        71.838 |             82.214 |       0.935 |   0.126 |
|      3541 | 4116 |        74.746 |             83.597 |       0.931 |   0.106 |
|      3542 | 4116 |        73.365 |             84.804 |       0.932 |   0.135 |
|      3543 | 4117 |        72.773 |             85.389 |       0.933 |   0.148 |
|      3544 | 4118 |        71.395 |             85.901 |       0.935 |   0.169 |
|      3545 | 4116 |        71.965 |             83.292 |       0.934 |   0.136 |
|      3546 | 4116 |        71.015 |             84.939 |       0.935 |   0.164 |
|      3547 | 4118 |        72.569 |             85.611 |       0.932 |   0.152 |
|      3548 | 4117 |        73.127 |             85.38  |       0.93  |   0.144 |
|      3549 | 4118 |        72.07  |             85.898 |       0.932 |   0.161 |
|      3550 | 4118 |        71.464 |             85.704 |       0.932 |   0.166 |
|      3551 | 4116 |        73.084 |             87.758 |       0.929 |   0.167 |
|      3552 | 4118 |        75.684 |             89.23  |       0.924 |   0.152 |
|      3553 | 4118 |        76.654 |             91.776 |       0.922 |   0.165 |
|      3554 | 4117 |        75.719 |             89.902 |       0.923 |   0.158 |
|      3555 | 4118 |        75.15  |             89.763 |       0.925 |   0.163 |
|      3556 | 4117 |        76.721 |             90.976 |       0.922 |   0.157 |
|      3557 | 4117 |        76.766 |             93.286 |       0.922 |   0.177 |
|      3558 | 4117 |        75.163 |             91.269 |       0.925 |   0.176 |
|      3559 | 4118 |        74.152 |             88.597 |       0.927 |   0.163 |
|      3560 | 4118 |        76.624 |             90.814 |       0.922 |   0.156 |
|      3561 | 4117 |        73.528 |             85.787 |       0.927 |   0.143 |
|      3562 | 4117 |        72.966 |             85.49  |       0.928 |   0.146 |
|      3563 | 4117 |        75.065 |             87.157 |       0.924 |   0.139 |
|      3564 | 4117 |        75.09  |             89.051 |       0.924 |   0.157 |
|      3565 | 4119 |        75.661 |             88.664 |       0.923 |   0.147 |
|      3566 | 4120 |        77.801 |             92.946 |       0.918 |   0.163 |
|      3567 | 4117 |        77.181 |             90.825 |       0.92  |   0.15  |
|      3568 | 4117 |        77.199 |             91.235 |       0.92  |   0.154 |
|      3569 | 4117 |        76.11  |             90.13  |       0.922 |   0.156 |
|      3570 | 4120 |        72.77  |             84.686 |       0.93  |   0.141 |
|      3571 | 4120 |        69.931 |             79.061 |       0.938 |   0.115 |
|      3572 | 4119 |        73.396 |             84.738 |       0.933 |   0.134 |
|      3573 | 4117 |        74.094 |             83.955 |       0.931 |   0.117 |
|      3574 | 4116 |        70.431 |             80.467 |       0.938 |   0.125 |
|      3575 | 4116 |        70.851 |             82.164 |       0.937 |   0.138 |
|      3576 | 4116 |        72.738 |             84.824 |       0.933 |   0.142 |
|      3577 | 4117 |        70.84  |             83.162 |       0.936 |   0.148 |
|      3578 | 4116 |        70.806 |             82.789 |       0.935 |   0.145 |
|      3579 | 4116 |        76.54  |             89.259 |       0.925 |   0.142 |
|      3580 | 4118 |        75.689 |             88.086 |       0.926 |   0.141 |
|      3581 | 4116 |        77.988 |             90.712 |       0.921 |   0.14  |
|      3582 | 4116 |        73.732 |             88.204 |       0.929 |   0.164 |
|      3583 | 4117 |        75.825 |             90.94  |       0.925 |   0.166 |
|      3584 | 4116 |        73.794 |             87.318 |       0.928 |   0.155 |
|      3585 | 4118 |        75.171 |             88.427 |       0.925 |   0.15  |
|      3586 | 4117 |        75.552 |             88.645 |       0.924 |   0.148 |
|      3587 | 4118 |        74.89  |             88.762 |       0.925 |   0.156 |
|      3588 | 4118 |        79.534 |             93.344 |       0.915 |   0.148 |
|      3589 | 4116 |        76.809 |             91.135 |       0.92  |   0.157 |
|      3590 | 4117 |        78.868 |             94.476 |       0.918 |   0.165 |
|      3591 | 4117 |        76.026 |             91.989 |       0.923 |   0.174 |
|      3592 | 4117 |        75.148 |             90.719 |       0.925 |   0.172 |
|      3593 | 4119 |        76.76  |             91.57  |       0.922 |   0.162 |
|      3594 | 4118 |        75.518 |             89.292 |       0.923 |   0.154 |
|      3595 | 4117 |        75.512 |             89.459 |       0.923 |   0.156 |
|      3596 | 4117 |        75.741 |             88.617 |       0.923 |   0.145 |
|      3597 | 4117 |        74.754 |             88.479 |       0.924 |   0.155 |
|      3598 | 4119 |        73.504 |             86.64  |       0.927 |   0.152 |
|      3599 | 4120 |        74.391 |             87.303 |       0.926 |   0.148 |
|      3600 | 4117 |        73.766 |             85.809 |       0.928 |   0.14  |
|      3601 | 4117 |        73.006 |             86.202 |       0.929 |   0.153 |
|      3602 | 4117 |        74.084 |             88.573 |       0.926 |   0.164 |
|      3603 | 4120 |        72.196 |             85.213 |       0.931 |   0.153 |
|      3604 | 4120 |        70.627 |             81.379 |       0.935 |   0.132 |
|      3605 | 4119 |        70.895 |             79.28  |       0.936 |   0.106 |
|      3606 | 4117 |        70.329 |             77.068 |       0.937 |   0.087 |
|      3607 | 4116 |        72.557 |             82.745 |       0.934 |   0.123 |
|      3608 | 4117 |        70.035 |             81.931 |       0.938 |   0.145 |
|      3609 | 4116 |        69.553 |             82.042 |       0.939 |   0.152 |
|      3610 | 4118 |        70.018 |             83.113 |       0.936 |   0.158 |
|      3611 | 4116 |        72.495 |             87.231 |       0.932 |   0.169 |
|      3612 | 4116 |        72.681 |             86.645 |       0.931 |   0.161 |
|      3613 | 4118 |        75.449 |             88.045 |       0.927 |   0.143 |
|      3614 | 4116 |        77.641 |             91.066 |       0.922 |   0.147 |
|      3615 | 4118 |        73.997 |             88.843 |       0.928 |   0.167 |
|      3616 | 4117 |        75.872 |             91.018 |       0.924 |   0.166 |
|      3617 | 4116 |        74.177 |             88.623 |       0.927 |   0.163 |
|      3618 | 4117 |        76.891 |             90.574 |       0.921 |   0.151 |
|      3619 | 4117 |        76.747 |             89.611 |       0.921 |   0.144 |
|      3620 | 4118 |        76.925 |             89.877 |       0.921 |   0.144 |
|      3621 | 4118 |        76.011 |             90.435 |       0.923 |   0.16  |
|      3622 | 4116 |        77.569 |             92.158 |       0.92  |   0.158 |
|      3623 | 4118 |        77.713 |             92.661 |       0.92  |   0.161 |
|      3624 | 4117 |        72.974 |             86.647 |       0.929 |   0.158 |
|      3625 | 4118 |        74.209 |             86.661 |       0.926 |   0.144 |
|      3626 | 4119 |        80.838 |             95.839 |       0.913 |   0.157 |
|      3627 | 4118 |        76.627 |             92.082 |       0.921 |   0.168 |
|      3628 | 4117 |        75.036 |             89.177 |       0.924 |   0.159 |
|      3629 | 4117 |        74.845 |             88.662 |       0.924 |   0.156 |
|      3630 | 4117 |        73.761 |             86.383 |       0.926 |   0.146 |
|      3631 | 4118 |        74.453 |             86.889 |       0.925 |   0.143 |
|      3632 | 4119 |        74.143 |             85.835 |       0.926 |   0.136 |
|      3633 | 4117 |        75.666 |             87.456 |       0.923 |   0.135 |
|      3634 | 4117 |        77.217 |             90.608 |       0.919 |   0.148 |
|      3635 | 4117 |        76.27  |             90.001 |       0.921 |   0.153 |
|      3636 | 4119 |        73.758 |             86.346 |       0.928 |   0.146 |
|      3637 | 4120 |        70.165 |             82.107 |       0.936 |   0.145 |
|      3638 | 4119 |        71.841 |             83.322 |       0.935 |   0.138 |
|      3639 | 4117 |        72.001 |             79.36  |       0.935 |   0.093 |
|      3640 | 4117 |        71.717 |             81.068 |       0.935 |   0.115 |
|      3641 | 4117 |        71.53  |             83.577 |       0.935 |   0.144 |
|      3642 | 4115 |        70.02  |             82.856 |       0.938 |   0.155 |
|      3643 | 4117 |        72.548 |             85.529 |       0.934 |   0.152 |
|      3644 | 4117 |        71.613 |             83.314 |       0.933 |   0.14  |
|      3645 | 4116 |        72.355 |             84.24  |       0.932 |   0.141 |
|      3646 | 4116 |        72.063 |             85.378 |       0.932 |   0.156 |
|      3647 | 4116 |        73.913 |             87.201 |       0.929 |   0.152 |
|      3648 | 4116 |        76.885 |             89.605 |       0.923 |   0.142 |
|      3649 | 4117 |        74.059 |             88.476 |       0.927 |   0.163 |
|      3650 | 4117 |        79.331 |             93.318 |       0.918 |   0.15  |
|      3651 | 4116 |        74.622 |             88.586 |       0.926 |   0.158 |
|      3652 | 4116 |        77.892 |             91.041 |       0.918 |   0.144 |
|      3653 | 4117 |        75.288 |             88.889 |       0.924 |   0.153 |
|      3654 | 4118 |        75.007 |             89.063 |       0.925 |   0.158 |
|      3655 | 4117 |        78.054 |             91.331 |       0.919 |   0.145 |
|      3656 | 4116 |        80.562 |             93.752 |       0.914 |   0.141 |
|      3657 | 4116 |        79.678 |             94.985 |       0.916 |   0.161 |
|      3658 | 4117 |        75.633 |             89.479 |       0.923 |   0.155 |
|      3659 | 4118 |        75.97  |             89.25  |       0.922 |   0.149 |
|      3660 | 4118 |        76.207 |             89.905 |       0.922 |   0.152 |
|      3661 | 4116 |        76.206 |             91.462 |       0.922 |   0.167 |
|      3662 | 4116 |        76.842 |             91.122 |       0.92  |   0.157 |
|      3663 | 4117 |        75.688 |             90.194 |       0.921 |   0.161 |
|      3664 | 4117 |        76.474 |             90.812 |       0.92  |   0.158 |
|      3665 | 4119 |        75.998 |             89.527 |       0.922 |   0.151 |
|      3666 | 4118 |        80.079 |             94.235 |       0.914 |   0.15  |
|      3667 | 4118 |        75.285 |             88.508 |       0.923 |   0.149 |
|      3668 | 4117 |        78.864 |             92.334 |       0.915 |   0.146 |
|      3669 | 4118 |        79.684 |             90.382 |       0.912 |   0.118 |
|      3670 | 4118 |        75.188 |             86.122 |       0.925 |   0.127 |
|      3671 | 4119 |        73.59  |             85.299 |       0.929 |   0.137 |
|      3672 | 4119 |        72.721 |             83.363 |       0.932 |   0.128 |
|      3673 | 4118 |        73.388 |             84.531 |       0.931 |   0.132 |
|      3674 | 4117 |        73.347 |             84.157 |       0.932 |   0.128 |
|      3675 | 4117 |        70.597 |             83.382 |       0.937 |   0.153 |
|      3676 | 4116 |        71.182 |             83.679 |       0.936 |   0.149 |
|      3677 | 4116 |        72.988 |             84.808 |       0.933 |   0.139 |
|      3678 | 4116 |        71.998 |             84.804 |       0.933 |   0.151 |
|      3679 | 4116 |        72.105 |             85.541 |       0.933 |   0.157 |
|      3680 | 4117 |        73.837 |             86.64  |       0.93  |   0.148 |
|      3681 | 4116 |        73.633 |             85.847 |       0.929 |   0.142 |
|      3682 | 4117 |        76.122 |             88.994 |       0.924 |   0.145 |
|      3683 | 4117 |        77.849 |             90.205 |       0.921 |   0.137 |
|      3684 | 4116 |        73.26  |             87.981 |       0.929 |   0.167 |
|      3685 | 4116 |        76.448 |             90.563 |       0.922 |   0.156 |
|      3686 | 4116 |        78.117 |             93.596 |       0.919 |   0.165 |
|      3687 | 4116 |        77.301 |             91.859 |       0.92  |   0.158 |
|      3688 | 4117 |        81.494 |             95.134 |       0.911 |   0.143 |
|      3689 | 4117 |        80.39  |             92.601 |       0.914 |   0.132 |
|      3690 | 4116 |        78.583 |             91.824 |       0.917 |   0.144 |
|      3691 | 4116 |        79.532 |             95.371 |       0.915 |   0.166 |
|      3692 | 4116 |        77.844 |             93.786 |       0.919 |   0.17  |
|      3693 | 4118 |        77.094 |             92.361 |       0.92  |   0.165 |
|      3694 | 4117 |        75.966 |             90.017 |       0.922 |   0.156 |
|      3695 | 4117 |        77.617 |             91.324 |       0.919 |   0.15  |
|      3696 | 4117 |        76.636 |             89.484 |       0.92  |   0.144 |
|      3697 | 4117 |        76.191 |             89.794 |       0.921 |   0.151 |
|      3698 | 4118 |        76.749 |             91.587 |       0.919 |   0.162 |
|      3699 | 4116 |        75.554 |             89.922 |       0.921 |   0.16  |
|      3700 | 4117 |        78.718 |             90.785 |       0.915 |   0.133 |
|      3701 | 4118 |        77.16  |             90.478 |       0.918 |   0.147 |
|      3702 | 4117 |        80.229 |             93.011 |       0.913 |   0.137 |
|      3703 | 4118 |        77.116 |             89.27  |       0.919 |   0.136 |
|      3704 | 4119 |        75.416 |             85.698 |       0.924 |   0.12  |
|      3705 | 4116 |        73.221 |             86.189 |       0.93  |   0.15  |
|      3706 | 4119 |        72.701 |             84.948 |       0.932 |   0.144 |
|      3707 | 4119 |        74.086 |             86.207 |       0.93  |   0.141 |
|      3708 | 4118 |        71.838 |             80.212 |       0.934 |   0.104 |
|      3709 | 4118 |        72.93  |             82.098 |       0.934 |   0.112 |
|      3710 | 4116 |        72.51  |             84.197 |       0.933 |   0.139 |
|      3711 | 4117 |        72.598 |             85.005 |       0.934 |   0.146 |
|      3712 | 4115 |        70.275 |             85.137 |       0.937 |   0.175 |
|      3713 | 4116 |        72.608 |             86.892 |       0.933 |   0.164 |
|      3714 | 4118 |        71.522 |             85.768 |       0.934 |   0.166 |
|      3715 | 4116 |        72.761 |             86.496 |       0.931 |   0.159 |
|      3716 | 4116 |        74.678 |             87.775 |       0.928 |   0.149 |
|      3717 | 4118 |        74.575 |             87.559 |       0.927 |   0.148 |
|      3718 | 4116 |        73.356 |             85.98  |       0.928 |   0.147 |
|      3719 | 4116 |        75.853 |             90.444 |       0.924 |   0.161 |
|      3720 | 4116 |        76.028 |             90.988 |       0.923 |   0.164 |
|      3721 | 4116 |        77.672 |             92.353 |       0.92  |   0.159 |
|      3722 | 4117 |        80.972 |             95.633 |       0.913 |   0.153 |
|      3723 | 4117 |        81.546 |             94.786 |       0.911 |   0.14  |
|      3724 | 4117 |        80.518 |             92.785 |       0.913 |   0.132 |
|      3725 | 4117 |        77.972 |             91.796 |       0.918 |   0.151 |
|      3726 | 4116 |        77.508 |             92.796 |       0.919 |   0.165 |
|      3727 | 4116 |        76.767 |             90.463 |       0.92  |   0.151 |
|      3728 | 4117 |        76.512 |             90.028 |       0.92  |   0.15  |
|      3729 | 4116 |        78.143 |             91.928 |       0.917 |   0.15  |
|      3730 | 4117 |        77.567 |             89.643 |       0.918 |   0.135 |
|      3731 | 4117 |        78.155 |             90.978 |       0.916 |   0.141 |
|      3732 | 4117 |        77.114 |             90.714 |       0.918 |   0.15  |
|      3733 | 4119 |        76.366 |             90.478 |       0.919 |   0.156 |
|      3734 | 4117 |        75.295 |             89.334 |       0.922 |   0.157 |
|      3735 | 4116 |        75.448 |             88.357 |       0.921 |   0.146 |
|      3736 | 4118 |        75.576 |             87.912 |       0.921 |   0.14  |
|      3737 | 4117 |        75.291 |             89.074 |       0.923 |   0.155 |
|      3738 | 4119 |        76.173 |             88.543 |       0.921 |   0.14  |
|      3739 | 4117 |        75.733 |             87.272 |       0.923 |   0.132 |
|      3740 | 4116 |        73.616 |             85.201 |       0.928 |   0.136 |
|      3741 | 4118 |        74.285 |             87.711 |       0.929 |   0.153 |
|      3742 | 4119 |        72.276 |             83.656 |       0.934 |   0.136 |
|      3743 | 4118 |        71.188 |             80.002 |       0.936 |   0.11  |
|      3744 | 4117 |        72.323 |             81.179 |       0.935 |   0.109 |
|      3745 | 4116 |        71.048 |             82.277 |       0.936 |   0.136 |
|      3746 | 4118 |        72.494 |             85.093 |       0.933 |   0.148 |
|      3747 | 4115 |        70.539 |             83.518 |       0.936 |   0.155 |
|      3748 | 4115 |        71.826 |             85.738 |       0.933 |   0.162 |
|      3749 | 4117 |        71.656 |             85.075 |       0.933 |   0.158 |
|      3750 | 4116 |        73.185 |             86.618 |       0.93  |   0.155 |
|      3751 | 4117 |        73.797 |             87.722 |       0.929 |   0.159 |
|      3752 | 4118 |        74.204 |             88.171 |       0.927 |   0.158 |
|      3753 | 4116 |        74.01  |             88.383 |       0.927 |   0.163 |
|      3754 | 4115 |        75.516 |             90.855 |       0.924 |   0.169 |
|      3755 | 4116 |        76.635 |             91.223 |       0.921 |   0.16  |
|      3756 | 4116 |        77.557 |             91.906 |       0.919 |   0.156 |
|      3757 | 4117 |        80.322 |             94.029 |       0.914 |   0.146 |
|      3758 | 4117 |        79.353 |             94.595 |       0.915 |   0.161 |
|      3759 | 4116 |        80.94  |             95.378 |       0.913 |   0.151 |
|      3760 | 4117 |        80.709 |             93.866 |       0.913 |   0.14  |
|      3761 | 4116 |        77.877 |             93.062 |       0.918 |   0.163 |
|      3762 | 4118 |        77.304 |             93.568 |       0.919 |   0.174 |
|      3763 | 4118 |        77.276 |             91.764 |       0.918 |   0.158 |
|      3764 | 4116 |        81.923 |             95.966 |       0.909 |   0.146 |
|      3765 | 4117 |        78.036 |             90.9   |       0.916 |   0.142 |
|      3766 | 4117 |        78.272 |             91.809 |       0.915 |   0.147 |
|      3767 | 4116 |        78.382 |             91.515 |       0.914 |   0.144 |
|      3768 | 4119 |        77.389 |             90.435 |       0.917 |   0.144 |
|      3769 | 4117 |        76.956 |             89.226 |       0.918 |   0.138 |
|      3770 | 4116 |        76.824 |             88.462 |       0.918 |   0.132 |
|      3771 | 4118 |        77.498 |             89.067 |       0.917 |   0.13  |
|      3772 | 4117 |        75.066 |             89.421 |       0.922 |   0.161 |
|      3773 | 4118 |        78.008 |             91.241 |       0.918 |   0.145 |
|      3774 | 4117 |        76.777 |             87.35  |       0.921 |   0.121 |
|      3775 | 4117 |        79.234 |             89.936 |       0.916 |   0.119 |
|      3776 | 4118 |        75.177 |             87.919 |       0.926 |   0.145 |
|      3777 | 4119 |        73.127 |             84.022 |       0.932 |   0.13  |
|      3778 | 4118 |        71.977 |             80.398 |       0.935 |   0.105 |
|      3779 | 4117 |        72.743 |             83.374 |       0.934 |   0.128 |
|      3780 | 4116 |        73.207 |             86.192 |       0.932 |   0.151 |
|      3781 | 4118 |        72.344 |             84.248 |       0.933 |   0.141 |
|      3782 | 4115 |        71.224 |             83.674 |       0.934 |   0.149 |
|      3783 | 4115 |        74.418 |             90.775 |       0.928 |   0.18  |
|      3784 | 4116 |        73.909 |             88.556 |       0.928 |   0.165 |
|      3785 | 4116 |        78.144 |             93.293 |       0.921 |   0.162 |
|      3786 | 4117 |        76.115 |             92.221 |       0.924 |   0.175 |
|      3787 | 4118 |        75.915 |             89.977 |       0.924 |   0.156 |
|      3788 | 4114 |        76.321 |             90.803 |       0.923 |   0.159 |
|      3789 | 4115 |        79.93  |             92.563 |       0.916 |   0.136 |
|      3790 | 4117 |        77.017 |             90.874 |       0.921 |   0.152 |
|      3791 | 4116 |        79.598 |             93.349 |       0.915 |   0.147 |
|      3792 | 4118 |        81.328 |             95.793 |       0.911 |   0.151 |
|      3793 | 4115 |        79.161 |             95.29  |       0.915 |   0.169 |
|      3794 | 4116 |        77.457 |             91.475 |       0.92  |   0.153 |
|      3795 | 4117 |        81.107 |             95.391 |       0.912 |   0.15  |
|      3796 | 4116 |        80.737 |             95.19  |       0.912 |   0.152 |
|      3797 | 4118 |        78.171 |             93.544 |       0.916 |   0.164 |
|      3798 | 4116 |        76.853 |             90.99  |       0.918 |   0.155 |
|      3799 | 4116 |        81.014 |             95.76  |       0.91  |   0.154 |
|      3800 | 4118 |        77.05  |             89.614 |       0.918 |   0.14  |
|      3801 | 4117 |        83.875 |             97.873 |       0.904 |   0.143 |
|      3802 | 4117 |        79.092 |             92.686 |       0.914 |   0.147 |
|      3803 | 4118 |        76.393 |             89.163 |       0.919 |   0.143 |
|      3804 | 4116 |        75.965 |             89.501 |       0.92  |   0.151 |
|      3805 | 4117 |        78.127 |             91.623 |       0.915 |   0.147 |
|      3806 | 4118 |        76.359 |             90.172 |       0.919 |   0.153 |
|      3807 | 4117 |        77.937 |             90.28  |       0.916 |   0.137 |
|      3808 | 4118 |        79.283 |             93.572 |       0.915 |   0.153 |
|      3809 | 4117 |        78.804 |             91.943 |       0.918 |   0.143 |
|      3810 | 4118 |        79.124 |             91.182 |       0.918 |   0.132 |
|      3811 | 4118 |        77.321 |             89.202 |       0.921 |   0.133 |
|      3812 | 4118 |        74.291 |             86.018 |       0.929 |   0.136 |
|      3813 | 4119 |        71.923 |             79.404 |       0.935 |   0.094 |
|      3814 | 4118 |        72.894 |             83.008 |       0.934 |   0.122 |
|      3815 | 4115 |        75.16  |             86.752 |       0.929 |   0.134 |
|      3816 | 4118 |        72.619 |             85.084 |       0.932 |   0.146 |
|      3817 | 4115 |        75.659 |             90.813 |       0.926 |   0.167 |
|      3818 | 4114 |        78.239 |             94.053 |       0.921 |   0.168 |
|      3819 | 4115 |        74.72  |             89.273 |       0.927 |   0.163 |
|      3820 | 4116 |        78.661 |             93.522 |       0.92  |   0.159 |
|      3821 | 4118 |        74.38  |             88.879 |       0.927 |   0.163 |
|      3822 | 4117 |        76.318 |             90.485 |       0.923 |   0.157 |
|      3823 | 4115 |        76.014 |             90.408 |       0.924 |   0.159 |
|      3824 | 4115 |        76.784 |             90.637 |       0.922 |   0.153 |
|      3825 | 4116 |        78.128 |             94.046 |       0.919 |   0.169 |
|      3826 | 4118 |        78.628 |             94.666 |       0.918 |   0.169 |
|      3827 | 4117 |        79.509 |             94.661 |       0.916 |   0.16  |
|      3828 | 4115 |        76.358 |             91.059 |       0.921 |   0.161 |
|      3829 | 4115 |        76.896 |             90.569 |       0.92  |   0.151 |
|      3830 | 4116 |        76.81  |             90.765 |       0.92  |   0.154 |
|      3831 | 4117 |        79.762 |             94.795 |       0.913 |   0.159 |
|      3832 | 4118 |        82.347 |             95.907 |       0.908 |   0.141 |
|      3833 | 4116 |        78.732 |             92.17  |       0.913 |   0.146 |
|      3834 | 4116 |        79.655 |             91.924 |       0.912 |   0.133 |
|      3835 | 4117 |        79.918 |             91.648 |       0.911 |   0.128 |
|      3836 | 4117 |        80.483 |             91.992 |       0.91  |   0.125 |
|      3837 | 4117 |        78.425 |             91.876 |       0.915 |   0.146 |
|      3838 | 4116 |        77.935 |             92.027 |       0.917 |   0.153 |
|      3839 | 4118 |        76.491 |             91.01  |       0.919 |   0.16  |
|      3840 | 4117 |        77.695 |             91.223 |       0.916 |   0.148 |
|      3841 | 4118 |        81.552 |             94.745 |       0.907 |   0.139 |
|      3842 | 4117 |        80.708 |             94.566 |       0.909 |   0.147 |
|      3843 | 4117 |        82.709 |             95.619 |       0.911 |   0.135 |
|      3844 | 4118 |        79.234 |             92.829 |       0.917 |   0.146 |
|      3845 | 4118 |        78.547 |             89.315 |       0.919 |   0.121 |
|      3846 | 4118 |        74.744 |             84.59  |       0.929 |   0.116 |
|      3847 | 4117 |        71.973 |             79.537 |       0.935 |   0.095 |
|      3848 | 4118 |        71.139 |             78.884 |       0.937 |   0.098 |
|      3849 | 4115 |        74.767 |             86.626 |       0.929 |   0.137 |
|      3850 | 4117 |        72.865 |             85.713 |       0.932 |   0.15  |
|      3851 | 4114 |        75.249 |             89.116 |       0.927 |   0.156 |
|      3852 | 4115 |        75.249 |             90.371 |       0.926 |   0.167 |
|      3853 | 4115 |        76.059 |             90.874 |       0.924 |   0.163 |
|      3854 | 4115 |        74.523 |             89.414 |       0.926 |   0.167 |
|      3855 | 4117 |        75.565 |             89.841 |       0.925 |   0.159 |
|      3856 | 4116 |        81.505 |             94.868 |       0.914 |   0.141 |
|      3857 | 4116 |        79.387 |             92.379 |       0.918 |   0.141 |
|      3858 | 4115 |        80.478 |             94.765 |       0.915 |   0.151 |
|      3859 | 4115 |        77.905 |             92.89  |       0.919 |   0.161 |
|      3860 | 4118 |        80.259 |             94.549 |       0.914 |   0.151 |
|      3861 | 4116 |        80.218 |             95.129 |       0.914 |   0.157 |
|      3862 | 4116 |        76.913 |             91.393 |       0.92  |   0.158 |
|      3863 | 4116 |        76.417 |             89.83  |       0.921 |   0.149 |
|      3864 | 4116 |        76.832 |             90.72  |       0.919 |   0.153 |
|      3865 | 4117 |        82.712 |             96.144 |       0.906 |   0.14  |
|      3866 | 4116 |        80.633 |             93.484 |       0.909 |   0.137 |
|      3867 | 4116 |        81.629 |             93.051 |       0.908 |   0.123 |
|      3868 | 4116 |        81.969 |             93.097 |       0.907 |   0.12  |
|      3869 | 4117 |        80.848 |             92.458 |       0.91  |   0.126 |
|      3870 | 4117 |        79.664 |             92.637 |       0.912 |   0.14  |
|      3871 | 4117 |        77.791 |             89.933 |       0.917 |   0.135 |
|      3872 | 4116 |        78.328 |             91.684 |       0.916 |   0.146 |
|      3873 | 4116 |        76.908 |             91.224 |       0.919 |   0.157 |
|      3874 | 4117 |        81.662 |             94.492 |       0.909 |   0.136 |
|      3875 | 4117 |        80.422 |             92.125 |       0.911 |   0.127 |
|      3876 | 4118 |        79.201 |             90.021 |       0.918 |   0.12  |
|      3877 | 4117 |        79.484 |             89.043 |       0.918 |   0.107 |
|      3878 | 4118 |        76.938 |             89.48  |       0.923 |   0.14  |
|      3879 | 4118 |        72.624 |             82.979 |       0.933 |   0.125 |
|      3880 | 4116 |        73.562 |             81.582 |       0.932 |   0.098 |
|      3881 | 4115 |        76.682 |             88.975 |       0.925 |   0.138 |
|      3882 | 4115 |        73.959 |             86.647 |       0.93  |   0.146 |
|      3883 | 4117 |        73.007 |             85.352 |       0.931 |   0.145 |
|      3884 | 4115 |        74.337 |             87.701 |       0.928 |   0.152 |
|      3885 | 4115 |        73.574 |             86.402 |       0.929 |   0.148 |
|      3886 | 4115 |        72.993 |             85.74  |       0.93  |   0.149 |
|      3887 | 4115 |        73.614 |             87.746 |       0.928 |   0.161 |
|      3888 | 4117 |        74.342 |             88.168 |       0.927 |   0.157 |
|      3889 | 4116 |        77.648 |             92.663 |       0.921 |   0.162 |
|      3890 | 4116 |        81.034 |             94.455 |       0.914 |   0.142 |
|      3891 | 4115 |        82.174 |             98.634 |       0.912 |   0.167 |
|      3892 | 4115 |        76.16  |             89.678 |       0.922 |   0.151 |
|      3893 | 4118 |        80.797 |             96.086 |       0.914 |   0.159 |
|      3894 | 4116 |        76.319 |             89.948 |       0.921 |   0.152 |
|      3895 | 4116 |        78.173 |             91.821 |       0.918 |   0.149 |
|      3896 | 4116 |        77.987 |             90.864 |       0.917 |   0.142 |
|      3897 | 4115 |        76.132 |             90.443 |       0.921 |   0.158 |
|      3898 | 4116 |        80.525 |             94.195 |       0.911 |   0.145 |
|      3899 | 4116 |        82.439 |             94.783 |       0.907 |   0.13  |
|      3900 | 4116 |        78.891 |             91.886 |       0.914 |   0.141 |
|      3901 | 4116 |        78.351 |             90.618 |       0.915 |   0.135 |
|      3902 | 4117 |        79.012 |             92.303 |       0.913 |   0.144 |
|      3903 | 4117 |        79.863 |             93.345 |       0.912 |   0.144 |
|      3904 | 4116 |        79.89  |             93.249 |       0.912 |   0.143 |
|      3905 | 4116 |        79.3   |             92.463 |       0.913 |   0.142 |
|      3906 | 4117 |        84.461 |             96.323 |       0.903 |   0.123 |
|      3907 | 4117 |        81.559 |             93.267 |       0.909 |   0.126 |
|      3908 | 4116 |        78.689 |             87.743 |       0.92  |   0.103 |
|      3909 | 4118 |        77.739 |             89.311 |       0.923 |   0.13  |
|      3910 | 4118 |        75.064 |             85.559 |       0.929 |   0.123 |
|      3911 | 4116 |        73.734 |             81.285 |       0.932 |   0.093 |
|      3912 | 4115 |        73.397 |             85.526 |       0.93  |   0.142 |
|      3913 | 4116 |        71.498 |             84.216 |       0.934 |   0.151 |
|      3914 | 4115 |        71.395 |             85.104 |       0.934 |   0.161 |
|      3915 | 4116 |        73.073 |             86.341 |       0.931 |   0.154 |
|      3916 | 4115 |        70.819 |             82.377 |       0.934 |   0.14  |
|      3917 | 4115 |        71.837 |             84.562 |       0.932 |   0.15  |
|      3918 | 4115 |        73.352 |             87.42  |       0.929 |   0.161 |
|      3919 | 4116 |        74.934 |             90.407 |       0.926 |   0.171 |
|      3920 | 4116 |        79.295 |             94.34  |       0.918 |   0.159 |
|      3921 | 4116 |        79.187 |             93.432 |       0.917 |   0.152 |
|      3922 | 4116 |        80.895 |             95.024 |       0.914 |   0.149 |
|      3923 | 4115 |        78.008 |             91.924 |       0.919 |   0.151 |
|      3924 | 4116 |        77.814 |             90.355 |       0.919 |   0.139 |
|      3925 | 4116 |        77.823 |             90.63  |       0.919 |   0.141 |
|      3926 | 4117 |        78.208 |             92.625 |       0.918 |   0.156 |
|      3927 | 4116 |        77.393 |             90.161 |       0.919 |   0.142 |
|      3928 | 4115 |        77.222 |             90.524 |       0.918 |   0.147 |
|      3929 | 4114 |        80.598 |             93.482 |       0.912 |   0.138 |
|      3930 | 4116 |        78.668 |             90.008 |       0.915 |   0.126 |
|      3931 | 4116 |        81.397 |             92.128 |       0.91  |   0.116 |
|      3932 | 4117 |        77.779 |             89.857 |       0.916 |   0.134 |
|      3933 | 4116 |        78.995 |             93.054 |       0.913 |   0.151 |
|      3934 | 4116 |        81.794 |             95.42  |       0.908 |   0.143 |
|      3935 | 4116 |        81.63  |             95.358 |       0.908 |   0.144 |
|      3936 | 4116 |        82.641 |             96.507 |       0.906 |   0.144 |
|      3937 | 4115 |        75.061 |             84.758 |       0.929 |   0.114 |
|      3938 | 4115 |        77.143 |             87.597 |       0.925 |   0.119 |
|      3939 | 4116 |        75.249 |             87.81  |       0.927 |   0.143 |
|      3940 | 4116 |        74.867 |             88.008 |       0.929 |   0.149 |
|      3941 | 4115 |        70.907 |             83.947 |       0.935 |   0.155 |
|      3942 | 4116 |        75.697 |             88.112 |       0.927 |   0.141 |
|      3943 | 4115 |        71.285 |             83.019 |       0.933 |   0.141 |
|      3944 | 4115 |        71.373 |             83.867 |       0.933 |   0.149 |
|      3945 | 4116 |        76.012 |             88.496 |       0.925 |   0.141 |
|      3946 | 4115 |        74.7   |             88.944 |       0.927 |   0.16  |
|      3947 | 4115 |        76.388 |             89.447 |       0.922 |   0.146 |
|      3948 | 4117 |        80.656 |             92.573 |       0.914 |   0.129 |
|      3949 | 4116 |        81.234 |             95.281 |       0.914 |   0.147 |
|      3950 | 4115 |        77.702 |             91.777 |       0.921 |   0.153 |
|      3951 | 4115 |        74.641 |             87.436 |       0.926 |   0.146 |
|      3952 | 4115 |        81.282 |             93.452 |       0.912 |   0.13  |
|      3953 | 4117 |        81.032 |             94.211 |       0.912 |   0.14  |
|      3954 | 4117 |        77.825 |             90.624 |       0.918 |   0.141 |
|      3955 | 4114 |        81.614 |             95.187 |       0.91  |   0.143 |
|      3956 | 4116 |        81.32  |             91.964 |       0.909 |   0.116 |
|      3957 | 4116 |        83.841 |             93.738 |       0.904 |   0.106 |
|      3958 | 4117 |        78.047 |             90.471 |       0.916 |   0.137 |
|      3959 | 4117 |        78.352 |             92.273 |       0.915 |   0.151 |
|      3960 | 4115 |        80.559 |             95.189 |       0.91  |   0.154 |
|      3961 | 4116 |        81.624 |             95.78  |       0.909 |   0.148 |
|      3962 | 4117 |        83.544 |             95.266 |       0.905 |   0.123 |
|      3963 | 4116 |        84.302 |             95.572 |       0.903 |   0.118 |
|      3964 | 4114 |        76.774 |             87.912 |       0.926 |   0.127 |
|      3965 | 4115 |        75.954 |             86.583 |       0.927 |   0.123 |
|      3966 | 4114 |        74.643 |             84.978 |       0.929 |   0.122 |
|      3967 | 4115 |        71.632 |             83.867 |       0.934 |   0.146 |
|      3968 | 4115 |        75.511 |             88.165 |       0.926 |   0.144 |
|      3969 | 4114 |        75.361 |             89.725 |       0.927 |   0.16  |
|      3970 | 4114 |        76.506 |             89.145 |       0.925 |   0.142 |
|      3971 | 4117 |        78.259 |             91.38  |       0.922 |   0.144 |
|      3972 | 4115 |        70.752 |             82.931 |       0.935 |   0.147 |
|      3973 | 4115 |        72.485 |             84.959 |       0.932 |   0.147 |
|      3974 | 4116 |        71.703 |             83.874 |       0.933 |   0.145 |
|      3975 | 4115 |        71.551 |             82.94  |       0.934 |   0.137 |
|      3976 | 4115 |        70.634 |             82.554 |       0.935 |   0.144 |
|      3977 | 4116 |        72.52  |             84.449 |       0.931 |   0.141 |
|      3978 | 4115 |        73.824 |             86.722 |       0.927 |   0.149 |
|      3979 | 4115 |        75.065 |             89.622 |       0.925 |   0.162 |
|      3980 | 4117 |        77.498 |             90.053 |       0.921 |   0.139 |
|      3981 | 4116 |        77.126 |             90.107 |       0.921 |   0.144 |
|      3982 | 4115 |        76.528 |             90.099 |       0.922 |   0.151 |
|      3983 | 4114 |        76.637 |             90.487 |       0.922 |   0.153 |
|      3984 | 4115 |        78.89  |             91.355 |       0.917 |   0.136 |
|      3985 | 4117 |        79.9   |             92.926 |       0.914 |   0.14  |
|      3986 | 4117 |        82.6   |             94.075 |       0.908 |   0.122 |
|      3987 | 4116 |        79.869 |             90.574 |       0.912 |   0.118 |
|      3988 | 4115 |        82.827 |             94.35  |       0.906 |   0.122 |
|      3989 | 4115 |        85.659 |             98.403 |       0.9   |   0.13  |
|      3990 | 4117 |        79.555 |             92.358 |       0.914 |   0.139 |
|      3991 | 4116 |        75.572 |             86.017 |       0.929 |   0.121 |
|      3992 | 4114 |        76.925 |             87.571 |       0.926 |   0.122 |
|      3993 | 4114 |        70.783 |             81.578 |       0.937 |   0.132 |
|      3994 | 4115 |        73.536 |             84.997 |       0.931 |   0.135 |
|      3995 | 4114 |        72.555 |             84.431 |       0.933 |   0.141 |
|      3996 | 4115 |        73.226 |             84.358 |       0.932 |   0.132 |
|      3997 | 4114 |        72.527 |             84.226 |       0.933 |   0.139 |
|      3998 | 4115 |        73.148 |             85.236 |       0.932 |   0.142 |
|      3999 | 4115 |        72.491 |             85.551 |       0.932 |   0.153 |
|      4000 | 4115 |        74.982 |             87.525 |       0.928 |   0.143 |
|      4001 | 4115 |        72.699 |             87.36  |       0.932 |   0.168 |
|      4002 | 4114 |        73.914 |             89.097 |       0.93  |   0.17  |
|      4003 | 4114 |        75.56  |             87.746 |       0.927 |   0.139 |
|      4004 | 4117 |        77.682 |             90.664 |       0.923 |   0.143 |
|      4005 | 4115 |        72.375 |             84.431 |       0.932 |   0.143 |
|      4006 | 4114 |        72.992 |             84.742 |       0.93  |   0.139 |
|      4007 | 4116 |        72.876 |             84.106 |       0.931 |   0.134 |
|      4008 | 4115 |        74.73  |             84.235 |       0.929 |   0.113 |
|      4009 | 4115 |        71.449 |             83.478 |       0.935 |   0.144 |
|      4010 | 4115 |        73.06  |             87.059 |       0.932 |   0.161 |
|      4011 | 4114 |        75.304 |             86.388 |       0.925 |   0.128 |
|      4012 | 4115 |        73.226 |             83.894 |       0.932 |   0.127 |
|      4013 | 4114 |        71.546 |             82.754 |       0.936 |   0.135 |
|      4014 | 4114 |        70.961 |             81.586 |       0.937 |   0.13  |
|      4015 | 4115 |        74.494 |             84.448 |       0.931 |   0.118 |
|      4016 | 4115 |        72.107 |             81.388 |       0.933 |   0.114 |
|      4017 | 4116 |        71.057 |             81.555 |       0.935 |   0.129 |
|      4018 | 4115 |        71.9   |             82.704 |       0.934 |   0.131 |
|      4019 | 4114 |        72.189 |             83.707 |       0.933 |   0.138 |
|      4020 | 4115 |        72.292 |             84.351 |       0.933 |   0.143 |
|      4021 | 4116 |        71.002 |             83.714 |       0.935 |   0.152 |
|      4022 | 4114 |        72.766 |             84.871 |       0.931 |   0.143 |
|      4023 | 4116 |        72.939 |             87.69  |       0.931 |   0.168 |
|      4024 | 4114 |        74.085 |             88.712 |       0.93  |   0.165 |
|      4025 | 4114 |        77.558 |             90.54  |       0.923 |   0.143 |
|      4026 | 4115 |        76.383 |             90.757 |       0.925 |   0.158 |
|      4027 | 4115 |        76.817 |             89.485 |       0.925 |   0.142 |
|      4028 | 4116 |        71.847 |             84.933 |       0.933 |   0.154 |
|      4029 | 4116 |        70.87  |             82.887 |       0.935 |   0.145 |
|      4030 | 4114 |        70.525 |             82.201 |       0.936 |   0.142 |
|      4031 | 4116 |        71.687 |             84.786 |       0.934 |   0.154 |
|      4032 | 4115 |        72.015 |             85.492 |       0.932 |   0.158 |
|      4033 | 4114 |        74.598 |             87.977 |       0.927 |   0.152 |
|      4034 | 4115 |        72.706 |             85.321 |       0.933 |   0.148 |
|      4035 | 4114 |        70.585 |             82.254 |       0.937 |   0.142 |
|      4036 | 4115 |        72.979 |             83.847 |       0.934 |   0.13  |
|      4037 | 4116 |        73.005 |             82.262 |       0.935 |   0.113 |
|      4038 | 4114 |        70.137 |             80.334 |       0.938 |   0.127 |
|      4039 | 4116 |        73.548 |             82.22  |       0.934 |   0.105 |
|      4040 | 4115 |        68.907 |             77.924 |       0.94  |   0.116 |
|      4041 | 4114 |        74.431 |             87.292 |       0.929 |   0.147 |
|      4042 | 4115 |        71.734 |             83.748 |       0.934 |   0.143 |
|      4043 | 4114 |        72.684 |             87.002 |       0.931 |   0.165 |
|      4044 | 4115 |        74.81  |             86.135 |       0.928 |   0.131 |
|      4045 | 4116 |        74.115 |             86.301 |       0.93  |   0.141 |
|      4046 | 4115 |        76.289 |             86.22  |       0.926 |   0.115 |
|      4047 | 4114 |        77.316 |             89.779 |       0.924 |   0.139 |
|      4048 | 4114 |        73.565 |             85.884 |       0.93  |   0.143 |
|      4049 | 4115 |        77.163 |             89.93  |       0.924 |   0.142 |
|      4050 | 4115 |        75.387 |             88.021 |       0.928 |   0.144 |
|      4051 | 4116 |        73.805 |             85.63  |       0.931 |   0.138 |
|      4052 | 4115 |        71.121 |             83.162 |       0.935 |   0.145 |
|      4053 | 4114 |        72.529 |             84.402 |       0.931 |   0.141 |
|      4054 | 4115 |        77.745 |             88.637 |       0.921 |   0.123 |
|      4055 | 4114 |        72.314 |             84.311 |       0.934 |   0.142 |
|      4056 | 4114 |        74.227 |             83.969 |       0.931 |   0.116 |
|      4057 | 4115 |        76.675 |             83.758 |       0.927 |   0.085 |
|      4058 | 4114 |        78.46  |             83.785 |       0.924 |   0.064 |
|      4059 | 4114 |        78.832 |             84.74  |       0.922 |   0.07  |
|      4060 | 4115 |        71.864 |             80.568 |       0.935 |   0.108 |
|      4061 | 4115 |        72.577 |             79.44  |       0.935 |   0.086 |
|      4062 | 4115 |        71.153 |             82.15  |       0.935 |   0.134 |
|      4063 | 4114 |        71.869 |             83.978 |       0.933 |   0.144 |
|      4064 | 4114 |        75.946 |             88.829 |       0.926 |   0.145 |
|      4065 | 4114 |        79.031 |             89.258 |       0.921 |   0.115 |
|      4066 | 4115 |        77.259 |             86.916 |       0.924 |   0.111 |
|      4067 | 4115 |        76.531 |             86.321 |       0.925 |   0.113 |
|      4068 | 4114 |        73.295 |             84.394 |       0.931 |   0.132 |
|      4069 | 4114 |        74.194 |             85.232 |       0.929 |   0.13  |
|      4070 | 4114 |        76.557 |             88.708 |       0.925 |   0.137 |
|      4071 | 4115 |        72.431 |             85.23  |       0.933 |   0.15  |
|      4072 | 4115 |        72.372 |             83.97  |       0.933 |   0.138 |
|      4073 | 4115 |        74.06  |             84.788 |       0.93  |   0.127 |
|      4074 | 4114 |        74.101 |             87.1   |       0.931 |   0.149 |
|      4075 | 4115 |        75.757 |             87.303 |       0.928 |   0.132 |
|      4076 | 4115 |        74.177 |             87.357 |       0.931 |   0.151 |
|      4077 | 4114 |        72.072 |             84.759 |       0.935 |   0.15  |
|      4078 | 4114 |        72.087 |             83.783 |       0.935 |   0.14  |
|      4079 | 4115 |        72.278 |             83.404 |       0.935 |   0.133 |
|      4080 | 4115 |        70.659 |             81.255 |       0.938 |   0.13  |
|      4081 | 4114 |        71.679 |             81.828 |       0.937 |   0.124 |
|      4082 | 4114 |        75.486 |             84.69  |       0.93  |   0.109 |
|      4083 | 4114 |        73.725 |             83.015 |       0.931 |   0.112 |
|      4084 | 4115 |        72.253 |             84.488 |       0.935 |   0.145 |
|      4085 | 4116 |        72.983 |             86.2   |       0.931 |   0.153 |
|      4086 | 4114 |        74.384 |             86.549 |       0.929 |   0.141 |
|      4087 | 4114 |        79.292 |             87.493 |       0.92  |   0.094 |
|      4088 | 4114 |        74.423 |             86.809 |       0.929 |   0.143 |
|      4089 | 4114 |        77.216 |             89.699 |       0.926 |   0.139 |
|      4090 | 4115 |        74.789 |             86.703 |       0.93  |   0.137 |
|      4091 | 4115 |        75.604 |             89.572 |       0.929 |   0.156 |
|      4092 | 4114 |        72.191 |             85.896 |       0.935 |   0.16  |
|      4093 | 4114 |        76.79  |             88.044 |       0.928 |   0.128 |
|      4094 | 4114 |        72.497 |             85.53  |       0.935 |   0.152 |
|      4095 | 4115 |        73.587 |             85.261 |       0.932 |   0.137 |
|      4096 | 4114 |        72.601 |             83.96  |       0.936 |   0.135 |
|      4097 | 4115 |        77.193 |             87.056 |       0.928 |   0.113 |
|      4098 | 4114 |        75.101 |             84.594 |       0.929 |   0.112 |
|      4099 | 4115 |        71.284 |             82.353 |       0.935 |   0.134 |
|      4100 | 4114 |        72.034 |             83.892 |       0.933 |   0.141 |
|      4101 | 4114 |        74.029 |             85.846 |       0.93  |   0.138 |
|      4102 | 4114 |        74.21  |             85.527 |       0.93  |   0.132 |
|      4103 | 4114 |        75.692 |             84.945 |       0.928 |   0.109 |
|      4104 | 4114 |        75.152 |             85.805 |       0.929 |   0.124 |
|      4105 | 4114 |        78.797 |             88.056 |       0.923 |   0.105 |
|      4106 | 4114 |        76.016 |             87.312 |       0.928 |   0.129 |
|      4107 | 4113 |        74.089 |             86.723 |       0.931 |   0.146 |
|      4108 | 4115 |        73.247 |             87.154 |       0.933 |   0.16  |
|      4109 | 4114 |        72.482 |             85.965 |       0.935 |   0.157 |
|      4110 | 4114 |        72.091 |             82.899 |       0.935 |   0.13  |
|      4111 | 4115 |        72.481 |             85.729 |       0.934 |   0.155 |
|      4112 | 4113 |        72.15  |             84.831 |       0.934 |   0.149 |
|      4113 | 4114 |        71.437 |             84.197 |       0.936 |   0.152 |
|      4114 | 4115 |        75.635 |             85.152 |       0.929 |   0.112 |
|      4115 | 4114 |        73.303 |             83.685 |       0.931 |   0.124 |
|      4116 | 4114 |        71.514 |             82.711 |       0.935 |   0.135 |
|      4117 | 4114 |        74.358 |             84.327 |       0.929 |   0.118 |
|      4118 | 4114 |        74.021 |             85.249 |       0.93  |   0.132 |
|      4119 | 4115 |        77.524 |             88.1   |       0.926 |   0.12  |
|      4120 | 4113 |        72.989 |             84.427 |       0.933 |   0.135 |
|      4121 | 4115 |        76.933 |             87.186 |       0.927 |   0.118 |
|      4122 | 4113 |        74.327 |             88.451 |       0.93  |   0.16  |
|      4123 | 4112 |        74.053 |             87.337 |       0.931 |   0.152 |
|      4124 | 4115 |        71.996 |             84.936 |       0.935 |   0.152 |
|      4125 | 4114 |        72.073 |             87.193 |       0.935 |   0.173 |
|      4126 | 4113 |        72.526 |             87.318 |       0.934 |   0.169 |
|      4127 | 4114 |        72.667 |             86.054 |       0.933 |   0.156 |
|      4128 | 4112 |        72.341 |             86.482 |       0.934 |   0.164 |
|      4129 | 4115 |        74.611 |             85.479 |       0.93  |   0.127 |
|      4130 | 4115 |        79.264 |             88.44  |       0.921 |   0.104 |
|      4131 | 4113 |        73.03  |             82.407 |       0.932 |   0.114 |
|      4132 | 4114 |        71.508 |             84.427 |       0.936 |   0.153 |
|      4133 | 4115 |        71.726 |             84.871 |       0.936 |   0.155 |
|      4134 | 4112 |        72.976 |             86.7   |       0.933 |   0.158 |
|      4135 | 4113 |        73.869 |             87.149 |       0.931 |   0.152 |
|      4136 | 4114 |        72.664 |             86.366 |       0.933 |   0.159 |
|      4137 | 4114 |        72.789 |             87.473 |       0.933 |   0.168 |
|      4138 | 4113 |        73.839 |             85.639 |       0.932 |   0.138 |
|      4139 | 4114 |        72.567 |             86.279 |       0.933 |   0.159 |
|      4140 | 4114 |        76.747 |             88.23  |       0.928 |   0.13  |
|      4141 | 4114 |        74.547 |             86.658 |       0.932 |   0.14  |
|      4142 | 4112 |        74.52  |             86.833 |       0.93  |   0.142 |
|      4143 | 4114 |        72.554 |             86.366 |       0.934 |   0.16  |
|      4144 | 4114 |        73.16  |             86.455 |       0.933 |   0.154 |
|      4145 | 4115 |        74.279 |             88.604 |       0.931 |   0.162 |
|      4146 | 4114 |        75.243 |             88.903 |       0.929 |   0.154 |
|      4147 | 4113 |        76.028 |             91.014 |       0.927 |   0.165 |
|      4148 | 4114 |        71.972 |             84.036 |       0.936 |   0.144 |
|      4149 | 4113 |        73.127 |             85.671 |       0.934 |   0.146 |
|      4150 | 4113 |        72.464 |             84.976 |       0.935 |   0.147 |
|      4151 | 4114 |        71.205 |             84.988 |       0.936 |   0.162 |
|      4152 | 4114 |        72.037 |             84.723 |       0.935 |   0.15  |
|      4153 | 4114 |        75.213 |             88.182 |       0.929 |   0.147 |
|      4154 | 4114 |        76.558 |             90.278 |       0.927 |   0.152 |
|      4155 | 4113 |        75.65  |             88.32  |       0.928 |   0.143 |
|      4156 | 4112 |        73.032 |             85.419 |       0.934 |   0.145 |
|      4157 | 4113 |        70.278 |             84.061 |       0.939 |   0.164 |
|      4158 | 4114 |        70.019 |             84.065 |       0.939 |   0.167 |
|      4159 | 4114 |        74.67  |             88.466 |       0.93  |   0.156 |
|      4160 | 4114 |        69.549 |             81.403 |       0.94  |   0.146 |
|      4161 | 4114 |        73.145 |             85.401 |       0.933 |   0.144 |
|      4162 | 4112 |        76.716 |             86.023 |       0.927 |   0.108 |
|      4163 | 4112 |        71.328 |             85.084 |       0.937 |   0.162 |
|      4164 | 4111 |        71.272 |             86.469 |       0.937 |   0.176 |
|      4165 | 4114 |        71.392 |             85.745 |       0.936 |   0.167 |
|      4166 | 4114 |        72.199 |             84.197 |       0.935 |   0.143 |
|      4167 | 4113 |        70.997 |             80.744 |       0.939 |   0.121 |
|      4168 | 4114 |        78.081 |             87.976 |       0.925 |   0.112 |
|      4169 | 4114 |        75.705 |             89.291 |       0.929 |   0.152 |
|      4170 | 4112 |        76.58  |             90.232 |       0.929 |   0.151 |
|      4171 | 4111 |        73.265 |             89.005 |       0.934 |   0.177 |
|      4172 | 4114 |        73.398 |             88.26  |       0.933 |   0.168 |
|      4173 | 4114 |        72.145 |             82.698 |       0.937 |   0.128 |
|      4174 | 4114 |        76.931 |             85.569 |       0.929 |   0.101 |
|      4175 | 4114 |        78.893 |             86.438 |       0.923 |   0.087 |
|      4176 | 4114 |        70.604 |             82.503 |       0.938 |   0.144 |
|      4177 | 4114 |        73.925 |             86.704 |       0.933 |   0.147 |
|      4178 | 4114 |        72.587 |             85.486 |       0.935 |   0.151 |
|      4179 | 4111 |        75.37  |             88.121 |       0.931 |   0.145 |
|      4180 | 4111 |        71.747 |             85.6   |       0.937 |   0.162 |
|      4181 | 4115 |        70.12  |             83.838 |       0.94  |   0.164 |
|      4182 | 4113 |        75.361 |             84.109 |       0.933 |   0.104 |
|      4183 | 4113 |        77.144 |             84.855 |       0.928 |   0.091 |
|      4184 | 4114 |        75.726 |             88.26  |       0.93  |   0.142 |
|      4185 | 4112 |        76.091 |             88.611 |       0.929 |   0.141 |
|      4186 | 4112 |        75.3   |             88.887 |       0.931 |   0.153 |
|      4187 | 4112 |        71.903 |             84.858 |       0.935 |   0.153 |
|      4188 | 4113 |        71.081 |             84.815 |       0.936 |   0.162 |
|      4189 | 4114 |        74.067 |             86.559 |       0.933 |   0.144 |
|      4190 | 4114 |        75.598 |             86.96  |       0.931 |   0.131 |
|      4191 | 4111 |        72.231 |             85.935 |       0.935 |   0.159 |
|      4192 | 4112 |        72.169 |             87.635 |       0.936 |   0.176 |
|      4193 | 4112 |        74.377 |             87.429 |       0.931 |   0.149 |
|      4194 | 4112 |        71.673 |             83.227 |       0.938 |   0.139 |
|      4195 | 4114 |        78.152 |             86.865 |       0.926 |   0.1   |
|      4196 | 4112 |        73.607 |             86.877 |       0.933 |   0.153 |
|      4197 | 4112 |        73.337 |             86.177 |       0.934 |   0.149 |
|      4198 | 4113 |        71.348 |             84.648 |       0.937 |   0.157 |
|      4199 | 4113 |        69.815 |             82.453 |       0.939 |   0.153 |
|      4200 | 4113 |        70.154 |             83.257 |       0.939 |   0.157 |
|      4201 | 4113 |        72.782 |             86.058 |       0.934 |   0.154 |
|      4202 | 4112 |        73.448 |             86.849 |       0.933 |   0.154 |
|      4203 | 4113 |        75.196 |             88.802 |       0.929 |   0.153 |
|      4204 | 4112 |        74.785 |             89.166 |       0.932 |   0.161 |
|      4205 | 4112 |        74.396 |             86.285 |       0.934 |   0.138 |
|      4206 | 4114 |        76.913 |             88.581 |       0.926 |   0.132 |
|      4207 | 4112 |        73.08  |             86.133 |       0.934 |   0.152 |
|      4208 | 4112 |        73.095 |             87.128 |       0.934 |   0.161 |
|      4209 | 4113 |        72.69  |             86.062 |       0.935 |   0.155 |
|      4210 | 4113 |        70.738 |             85.231 |       0.937 |   0.17  |
|      4211 | 4113 |        71.19  |             84.229 |       0.937 |   0.155 |
|      4212 | 4114 |        71.772 |             84.471 |       0.935 |   0.15  |
|      4213 | 4113 |        71.892 |             86.173 |       0.935 |   0.166 |
|      4214 | 4113 |        70.461 |             85.699 |       0.938 |   0.178 |
|      4215 | 4112 |        74.034 |             88.727 |       0.934 |   0.166 |
|      4216 | 4111 |        75.839 |             87.687 |       0.931 |   0.135 |
|      4217 | 4112 |        73.014 |             88.363 |       0.934 |   0.174 |
|      4218 | 4112 |        71.59  |             86.192 |       0.937 |   0.169 |
|      4219 | 4112 |        72.849 |             86.468 |       0.934 |   0.157 |
|      4220 | 4113 |        70.78  |             83.492 |       0.938 |   0.152 |
|      4221 | 4112 |        70.404 |             83.784 |       0.938 |   0.16  |
|      4222 | 4113 |        69.853 |             83.105 |       0.939 |   0.159 |
|      4223 | 4112 |        69.125 |             81.91  |       0.941 |   0.156 |
|      4224 | 4112 |        73.82  |             86.899 |       0.933 |   0.151 |
|      4225 | 4112 |        75.43  |             86.999 |       0.93  |   0.133 |
|      4226 | 4112 |        71.418 |             86.86  |       0.936 |   0.178 |
|      4227 | 4112 |        69.161 |             82.6   |       0.94  |   0.163 |
|      4228 | 4112 |        69.115 |             81.595 |       0.94  |   0.153 |
|      4229 | 4112 |        72.228 |             85.319 |       0.935 |   0.153 |
|      4230 | 4112 |        70.93  |             83.956 |       0.937 |   0.155 |
|      4231 | 4113 |        70.083 |             83.922 |       0.939 |   0.165 |
|      4232 | 4112 |        72.28  |             85.239 |       0.935 |   0.152 |
|      4233 | 4113 |        76.414 |             85.702 |       0.929 |   0.108 |
|      4234 | 4113 |        81.072 |             89.105 |       0.917 |   0.09  |
|      4235 | 4112 |        69.107 |             84.747 |       0.94  |   0.185 |
|      4236 | 4111 |        72.378 |             87.008 |       0.934 |   0.168 |
|      4237 | 4113 |        70.172 |             85.078 |       0.938 |   0.175 |
|      4238 | 4112 |        71.416 |             84.595 |       0.936 |   0.156 |
|      4239 | 4112 |        69.773 |             83.249 |       0.939 |   0.162 |
|      4240 | 4112 |        70.032 |             84.144 |       0.939 |   0.168 |
|      4241 | 4112 |        69.35  |             82.713 |       0.94  |   0.162 |
|      4242 | 4112 |        78.476 |             88.266 |       0.924 |   0.111 |
|      4243 | 4112 |        72.126 |             83.777 |       0.935 |   0.139 |
|      4244 | 4112 |        75.581 |             85.252 |       0.93  |   0.113 |
|      4245 | 4113 |        73.257 |             84.036 |       0.934 |   0.128 |
|      4246 | 4113 |        70.793 |             84.222 |       0.937 |   0.159 |
|      4247 | 4111 |        73.804 |             85.028 |       0.932 |   0.132 |
|      4248 | 4111 |        69.86  |             83.149 |       0.939 |   0.16  |
|      4249 | 4113 |        73.253 |             87.344 |       0.933 |   0.161 |
|      4250 | 4112 |        69.702 |             83.976 |       0.939 |   0.17  |
|      4251 | 4112 |        70.816 |             84.748 |       0.937 |   0.164 |
|      4252 | 4112 |        71.839 |             85.072 |       0.935 |   0.156 |
|      4253 | 4112 |        74.493 |             87.43  |       0.931 |   0.148 |
|      4254 | 4112 |        76.519 |             89.077 |       0.927 |   0.141 |
|      4255 | 4113 |        72.53  |             85.464 |       0.934 |   0.151 |
|      4256 | 4112 |        70.51  |             85.055 |       0.937 |   0.171 |
|      4257 | 4112 |        69.495 |             83.698 |       0.939 |   0.17  |
|      4258 | 4112 |        69.757 |             83.888 |       0.939 |   0.168 |
|      4259 | 4112 |        71.799 |             86.939 |       0.935 |   0.174 |
|      4260 | 4111 |        69.348 |             83.633 |       0.94  |   0.171 |
|      4261 | 4112 |        74.163 |             87.738 |       0.931 |   0.155 |
|      4262 | 4112 |        70.6   |             84.284 |       0.937 |   0.162 |
|      4263 | 4112 |        71.13  |             86.533 |       0.937 |   0.178 |
|      4264 | 4113 |        70.239 |             84.904 |       0.939 |   0.173 |
|      4265 | 4112 |        68.864 |             83.628 |       0.94  |   0.177 |
|      4266 | 4112 |        68.619 |             83.082 |       0.941 |   0.174 |
|      4267 | 4110 |        72.179 |             86.213 |       0.935 |   0.163 |
|      4268 | 4111 |        74.478 |             88.286 |       0.93  |   0.156 |
|      4269 | 4112 |        70.94  |             87.361 |       0.936 |   0.188 |
|      4270 | 4113 |        68.972 |             85.477 |       0.94  |   0.193 |
|      4271 | 4112 |        68.971 |             83.737 |       0.94  |   0.176 |
|      4272 | 4112 |        73.356 |             87.968 |       0.933 |   0.166 |
|      4273 | 4109 |        71.665 |             85.84  |       0.936 |   0.165 |
|      4274 | 4111 |        72.538 |             86.165 |       0.934 |   0.158 |
|      4275 | 4112 |        71.594 |             85.985 |       0.935 |   0.167 |
|      4276 | 4113 |        70.149 |             85.088 |       0.938 |   0.176 |
|      4277 | 4112 |        74.526 |             85.172 |       0.932 |   0.125 |
|      4278 | 4112 |        72.294 |             84.235 |       0.934 |   0.142 |
|      4279 | 4110 |        72.122 |             85.298 |       0.935 |   0.154 |
|      4280 | 4111 |        71.097 |             84.175 |       0.936 |   0.155 |
|      4281 | 4110 |        70.102 |             83.054 |       0.937 |   0.156 |
|      4282 | 4112 |        69.475 |             84.392 |       0.939 |   0.177 |
|      4283 | 4114 |        73.075 |             85.863 |       0.934 |   0.149 |
|      4284 | 4112 |        72.593 |             84.696 |       0.934 |   0.143 |
|      4285 | 4110 |        77.112 |             88.444 |       0.927 |   0.128 |
|      4286 | 4111 |        72.528 |             85.076 |       0.934 |   0.147 |
|      4287 | 4111 |        70.259 |             81.19  |       0.937 |   0.135 |
|      4288 | 4110 |        68.477 |             81.126 |       0.941 |   0.156 |
|      4289 | 4113 |        71.375 |             85.704 |       0.937 |   0.167 |
|      4290 | 4113 |        71.475 |             85.931 |       0.936 |   0.168 |
|      4291 | 4110 |        70.594 |             84.915 |       0.938 |   0.169 |
|      4292 | 4110 |        72.875 |             87.482 |       0.933 |   0.167 |
|      4293 | 4111 |        71.065 |             83.933 |       0.936 |   0.153 |
|      4294 | 4111 |        73.647 |             86.151 |       0.931 |   0.145 |
|      4295 | 4110 |        68.596 |             81.463 |       0.941 |   0.158 |
|      4296 | 4113 |        68.044 |             82.475 |       0.942 |   0.175 |
|      4297 | 4113 |        69.685 |             84.608 |       0.94  |   0.176 |
|      4298 | 4111 |        71.642 |             86.863 |       0.936 |   0.175 |
|      4299 | 4110 |        71.261 |             87.769 |       0.936 |   0.188 |
|      4300 | 4110 |        72.175 |             85.494 |       0.934 |   0.156 |
|      4301 | 4111 |        70.382 |             82.748 |       0.938 |   0.149 |
|      4302 | 4110 |        73.483 |             86.743 |       0.933 |   0.153 |
|      4303 | 4110 |        71.007 |             85.374 |       0.937 |   0.168 |
|      4304 | 4111 |        72.898 |             86.589 |       0.934 |   0.158 |
|      4305 | 4112 |        73.502 |             86.423 |       0.933 |   0.15  |
|      4306 | 4110 |        71.381 |             85.122 |       0.936 |   0.161 |
|      4307 | 4111 |        69.363 |             85.047 |       0.94  |   0.184 |
|      4308 | 4110 |        71.422 |             85.393 |       0.936 |   0.164 |
|      4309 | 4111 |        72.638 |             85.833 |       0.934 |   0.154 |
|      4310 | 4110 |        72.349 |             86.316 |       0.935 |   0.162 |
|      4311 | 4110 |        72.896 |             85.409 |       0.934 |   0.147 |
|      4312 | 4111 |        71.384 |             84.49  |       0.937 |   0.155 |
|      4313 | 4112 |        72.239 |             85.506 |       0.935 |   0.155 |
|      4314 | 4109 |        73.554 |             86.047 |       0.934 |   0.145 |
|      4315 | 4111 |        69.377 |             83.318 |       0.941 |   0.167 |
|      4316 | 4112 |        71.749 |             85.638 |       0.935 |   0.162 |
|      4317 | 4110 |        72.383 |             86.905 |       0.935 |   0.167 |
|      4318 | 4110 |        70.724 |             84.767 |       0.937 |   0.166 |
|      4319 | 4111 |        68.373 |             81.02  |       0.941 |   0.156 |
|      4320 | 4111 |        70.649 |             85.099 |       0.937 |   0.17  |
|      4321 | 4110 |        72.865 |             86.243 |       0.935 |   0.155 |
|      4322 | 4110 |        70.15  |             84.586 |       0.939 |   0.171 |
|      4323 | 4109 |        73.699 |             89.015 |       0.933 |   0.172 |
|      4324 | 4110 |        69.702 |             84.8   |       0.939 |   0.178 |
|      4325 | 4110 |        68.21  |             82.512 |       0.942 |   0.173 |
|      4326 | 4110 |        73.251 |             87.769 |       0.934 |   0.165 |
|      4327 | 4111 |        69.867 |             83.402 |       0.939 |   0.162 |
|      4328 | 4110 |        74.092 |             86.928 |       0.933 |   0.148 |
|      4329 | 4110 |        70.645 |             84.962 |       0.937 |   0.169 |
|      4330 | 4110 |        69.823 |             85.288 |       0.939 |   0.181 |
|      4331 | 4110 |        66.661 |             82.153 |       0.944 |   0.189 |
|      4332 | 4110 |        71.488 |             85.847 |       0.937 |   0.167 |
|      4333 | 4111 |        69.281 |             81.23  |       0.94  |   0.147 |
|      4334 | 4109 |        70.188 |             81.249 |       0.939 |   0.136 |
|      4335 | 4111 |        71.272 |             84.039 |       0.936 |   0.152 |
|      4336 | 4110 |        71.343 |             85.126 |       0.936 |   0.162 |
|      4337 | 4111 |        69.84  |             84.878 |       0.939 |   0.177 |
|      4338 | 4110 |        70.958 |             86.715 |       0.937 |   0.182 |
|      4339 | 4110 |        68.155 |             82.986 |       0.942 |   0.179 |
|      4340 | 4110 |        69.313 |             84.349 |       0.94  |   0.178 |
|      4341 | 4111 |        71.082 |             85.218 |       0.938 |   0.166 |
|      4342 | 4109 |        71.345 |             82.623 |       0.936 |   0.137 |
|      4343 | 4111 |        73.538 |             85.065 |       0.931 |   0.136 |
|      4344 | 4111 |        73.826 |             86.579 |       0.932 |   0.147 |
|      4345 | 4110 |        73.022 |             87.46  |       0.934 |   0.165 |
|      4346 | 4109 |        72.601 |             86.302 |       0.933 |   0.159 |
|      4347 | 4111 |        74.118 |             89.561 |       0.932 |   0.172 |
|      4348 | 4110 |        73.032 |             88.193 |       0.934 |   0.172 |
|      4349 | 4110 |        69.595 |             84.889 |       0.939 |   0.18  |
|      4350 | 4111 |        67.601 |             81.92  |       0.943 |   0.175 |
|      4351 | 4110 |        68.781 |             81.536 |       0.941 |   0.156 |
|      4352 | 4109 |        70.081 |             80.992 |       0.937 |   0.135 |
|      4353 | 4111 |        75.849 |             86.637 |       0.928 |   0.125 |
|      4354 | 4109 |        73.627 |             85.522 |       0.932 |   0.139 |
|      4355 | 4110 |        70.573 |             83.247 |       0.937 |   0.152 |
|      4356 | 4109 |        72.633 |             87.429 |       0.934 |   0.169 |
|      4357 | 4109 |        74.135 |             88.858 |       0.932 |   0.166 |
|      4358 | 4111 |        73.094 |             89.109 |       0.934 |   0.18  |
|      4359 | 4109 |        73.079 |             88.339 |       0.934 |   0.173 |
|      4360 | 4110 |        71.807 |             86.322 |       0.935 |   0.168 |
|      4361 | 4109 |        72.233 |             87.552 |       0.935 |   0.175 |
|      4362 | 4109 |        73.394 |             88.164 |       0.932 |   0.168 |
|      4363 | 4110 |        71.94  |             84.754 |       0.934 |   0.151 |
|      4364 | 4110 |        72.363 |             85.445 |       0.935 |   0.153 |
|      4365 | 4109 |        73.008 |             86.894 |       0.934 |   0.16  |
|      4366 | 4111 |        73.763 |             88.139 |       0.932 |   0.163 |
|      4367 | 4111 |        70.82  |             83.69  |       0.936 |   0.154 |
|      4368 | 4109 |        74.019 |             89.292 |       0.931 |   0.171 |
|      4369 | 4109 |        74.1   |             90.048 |       0.932 |   0.177 |
|      4370 | 4109 |        74.064 |             89.64  |       0.931 |   0.174 |
|      4371 | 4109 |        76.118 |             90.636 |       0.927 |   0.16  |
|      4372 | 4111 |        75.692 |             88.582 |       0.927 |   0.146 |
|      4373 | 4108 |        73.425 |             85.71  |       0.932 |   0.143 |
|      4374 | 4111 |        74.316 |             88.223 |       0.931 |   0.158 |
|      4375 | 4110 |        74.905 |             89.493 |       0.93  |   0.163 |
|      4376 | 4109 |        74.252 |             88.494 |       0.93  |   0.161 |
|      4377 | 4109 |        75.079 |             90.199 |       0.929 |   0.168 |
|      4378 | 4109 |        75.398 |             90.281 |       0.929 |   0.165 |
|      4379 | 4109 |        75.286 |             89.851 |       0.928 |   0.162 |
|      4380 | 4111 |        75.888 |             88.994 |       0.928 |   0.147 |
|      4381 | 4110 |        75.221 |             88.617 |       0.929 |   0.151 |
|      4382 | 4109 |        76.036 |             89.727 |       0.928 |   0.153 |
|      4383 | 4109 |        74.474 |             87.084 |       0.929 |   0.145 |

## Top 15 importancias (gain)

|                       |      0 |
|:----------------------|-------:|
| kt_lag1               | 0.5584 |
| kt_last_op            | 0.147  |
| kt_vecinos_mean_r3    | 0.096  |
| cloud_op_vecinos_mean | 0.0515 |
| kt_vecinos_mean       | 0.0275 |
| kt_vecinos_mean_r2    | 0.0185 |
| cloud_op_lag1         | 0.0071 |
| kd_difusa_lag1        | 0.0046 |
| fill_flag_lag1        | 0.0037 |
| cloud_op_media_12h    | 0.0034 |
| frac_nublado_12h      | 0.0033 |
| cos_hour              | 0.0032 |
| cloud_type_lag1       | 0.0032 |
| ssa_lag1              | 0.0031 |
| kt_lag3               | 0.0031 |
