Results/Tamaulipas/forecast/experiments/exp09_regiones/v6/summary.md
# exp09_regiones — v6

Región **Mante** — la más pequeña y alargada; sin halo perdería el 59 % de sus vecindarios r2. Entrena sobre la región + halo de 3 celdas (~13 km) y evalúa solo sobre la región, para no degradar los vecindarios espaciales en el borde. Feature-set de exp07 v4; float32 para que quepa en RAM.

- Alcance: 313 nodos evaluados + 221 de halo (entrenan, no puntúan) — bloque `region_mante_halo3` | feature-set: `base-nocturno-viento-cielo-nubes-adveccion-adveccion_upwind_r23` (64 features) | best_iteration: 515
- Bloques: ['base', 'nocturno', 'viento', 'cielo', 'nubes', 'adveccion', 'adveccion_upwind_r23'] | modelo: xgboost | cuantiles: —

**Test global (P50 si cuantílico):** RMSE 71.34 vs persistence 84.03 W/m² · skill 0.1510 · R² 0.939

## Métricas globales (val + test)

| segmento         |       n |   RMSE_persistence |   RMSE_modelo |   MAE_modelo |   MBE_modelo |   R2_persistence |   R2_modelo |   skill | split   |
|:-----------------|--------:|-------------------:|--------------:|-------------:|-------------:|-----------------:|------------:|--------:|:--------|
| global           | 1288677 |             88.925 |        74.327 |       43.169 |        3.258 |            0.911 |       0.938 |   0.164 | val     |
| limpio_ff0       | 1171938 |             91.055 |        75.98  |       44.364 |        2.407 |            0.9   |       0.93  |   0.166 | val     |
| rellenado_ff_pos |  116739 |             63.717 |        55.05  |       31.176 |       11.802 |            0.896 |       0.922 |   0.136 | val     |
| global           | 1291797 |             84.026 |        71.338 |       41.876 |        2.224 |            0.916 |       0.939 |   0.151 | test    |
| limpio_ff0       | 1172686 |             85.904 |        72.914 |       43.209 |        2.224 |            0.905 |       0.932 |   0.151 | test    |
| rellenado_ff_pos |  119111 |             62.594 |        53.395 |       28.755 |        2.224 |            0.904 |       0.93  |   0.147 | test    |

## Por régimen de nubosidad (test)

| regimen_nubosidad   |      n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------|-------:|--------------:|-------------------:|-------------:|------------:|--------:|
| cubierto (kt<0.3)   |  79430 |       131.329 |            120.714 |       97.934 |      -2.943 |  -0.088 |
| parcial (0.3-0.7)   | 236923 |       103.768 |            120.858 |       74.843 |       0.611 |   0.141 |
| despejado (kt>=0.7) | 975444 |        52.151 |             67.94  |       29.304 |       0.964 |   0.232 |

## Por régimen de rampa (test)

| regimen_rampa             |      n |   RMSE_modelo |   RMSE_persistence |   MAE_modelo |   R2_modelo |   skill |
|:--------------------------|-------:|--------------:|-------------------:|-------------:|------------:|--------:|
| rampa suave (<0.1)        | 899056 |        40.164 |             23.2   |       23.518 |       0.98  |  -0.731 |
| rampa moderada (0.1-0.25) | 242978 |        87.704 |            102.546 |       67.09  |       0.878 |   0.145 |
| rampa fuerte (>0.25)      | 149450 |       147.566 |            201.718 |      111.352 |       0.617 |   0.268 |

## Skill por nodo (modelo pooled, test)

skill medio 0.1516 · min 0.0582 · max 0.2074 (313 nodos)

|   nodo_id |    n |   RMSE_modelo |   RMSE_persistence |   R2_modelo |   skill |
|----------:|-----:|--------------:|-------------------:|------------:|--------:|
|        15 | 4128 |        73.649 |             84.934 |       0.935 |   0.133 |
|        16 | 4128 |        68.67  |             80.269 |       0.944 |   0.145 |
|        17 | 4128 |        69.67  |             81.481 |       0.943 |   0.145 |
|        18 | 4129 |        69.382 |             81.308 |       0.943 |   0.147 |
|        19 | 4129 |        70.263 |             82.759 |       0.941 |   0.151 |
|        20 | 4128 |        70.258 |             82.269 |       0.941 |   0.146 |
|        28 | 4130 |        71.183 |             82.379 |       0.939 |   0.136 |
|        29 | 4129 |        70.34  |             82.11  |       0.941 |   0.143 |
|        30 | 4128 |        69.893 |             80.139 |       0.941 |   0.128 |
|        31 | 4130 |        71.561 |             83.34  |       0.938 |   0.141 |
|        32 | 4129 |        72.321 |             85.429 |       0.935 |   0.153 |
|        33 | 4128 |        74.94  |             88.047 |       0.927 |   0.149 |
|        34 | 4128 |        78.15  |             89.915 |       0.922 |   0.131 |
|        35 | 4128 |        71.664 |             85.123 |       0.938 |   0.158 |
|        36 | 4128 |        72.662 |             86.566 |       0.936 |   0.161 |
|        37 | 4128 |        73.198 |             86.947 |       0.934 |   0.158 |
|        38 | 4127 |        72.345 |             86.77  |       0.936 |   0.166 |
|        39 | 4128 |        71.6   |             86.917 |       0.937 |   0.176 |
|        40 | 4126 |        73.205 |             87.341 |       0.934 |   0.162 |
|        45 | 4129 |        69.925 |             81.713 |       0.943 |   0.144 |
|        46 | 4129 |        69.905 |             81.588 |       0.942 |   0.143 |
|        47 | 4129 |        68.994 |             78.454 |       0.942 |   0.121 |
|        48 | 4128 |        71.501 |             84.094 |       0.938 |   0.15  |
|        49 | 4129 |        72.658 |             85.544 |       0.934 |   0.151 |
|        50 | 4128 |        76.474 |             90.445 |       0.925 |   0.154 |
|        51 | 4128 |        79.447 |             92.787 |       0.921 |   0.144 |
|        52 | 4128 |        73.619 |             84.979 |       0.933 |   0.134 |
|        53 | 4127 |        68.532 |             80.963 |       0.945 |   0.154 |
|        54 | 4128 |        68.992 |             82.487 |       0.944 |   0.164 |
|        55 | 4127 |        69.408 |             82.836 |       0.943 |   0.162 |
|        56 | 4127 |        68.841 |             82.358 |       0.943 |   0.164 |
|        57 | 4127 |        69.462 |             82.989 |       0.942 |   0.163 |
|        58 | 4128 |        71.588 |             86.023 |       0.939 |   0.168 |
|        59 | 4126 |        72.577 |             87.554 |       0.936 |   0.171 |
|        60 | 4128 |        72.993 |             88.363 |       0.935 |   0.174 |
|        61 | 4128 |        71.783 |             87.583 |       0.937 |   0.18  |
|        62 | 4128 |        71.358 |             87.122 |       0.938 |   0.181 |
|        63 | 4125 |        73.523 |             90.874 |       0.933 |   0.191 |
|        78 | 4129 |        68.927 |             79.748 |       0.944 |   0.136 |
|        79 | 4130 |        68.764 |             78.911 |       0.945 |   0.129 |
|        80 | 4128 |        68.614 |             79.827 |       0.944 |   0.14  |
|        81 | 4128 |        70.781 |             83.168 |       0.939 |   0.149 |
|        82 | 4128 |        69.885 |             81.94  |       0.94  |   0.147 |
|        83 | 4128 |        72.991 |             85.541 |       0.933 |   0.147 |
|        84 | 4128 |        74.933 |             87.76  |       0.929 |   0.146 |
|        85 | 4128 |        76.6   |             88.387 |       0.928 |   0.133 |
|        86 | 4127 |        68.83  |             80.646 |       0.943 |   0.147 |
|        87 | 4127 |        67.741 |             80.339 |       0.946 |   0.157 |
|        88 | 4128 |        69.203 |             83.451 |       0.943 |   0.171 |
|        89 | 4127 |        70.068 |             83.937 |       0.942 |   0.165 |
|        90 | 4127 |        69.904 |             83.527 |       0.942 |   0.163 |
|        91 | 4128 |        69.571 |             83.987 |       0.942 |   0.172 |
|        92 | 4128 |        71.342 |             84.969 |       0.939 |   0.16  |
|        93 | 4127 |        72.068 |             85.664 |       0.937 |   0.159 |
|        94 | 4127 |        72.604 |             87.56  |       0.936 |   0.171 |
|        95 | 4128 |        70.404 |             85.996 |       0.939 |   0.181 |
|       114 | 4129 |        68.25  |             79.809 |       0.946 |   0.145 |
|       115 | 4129 |        66.861 |             79.288 |       0.947 |   0.157 |
|       116 | 4128 |        67.278 |             79.111 |       0.946 |   0.15  |
|       117 | 4128 |        70.368 |             81.447 |       0.94  |   0.136 |
|       118 | 4126 |        69.284 |             81.101 |       0.942 |   0.146 |
|       119 | 4128 |        71.905 |             84.158 |       0.936 |   0.146 |
|       120 | 4128 |        73.917 |             86.459 |       0.931 |   0.145 |
|       121 | 4128 |        74.836 |             87.175 |       0.932 |   0.142 |
|       122 | 4126 |        68.482 |             80.543 |       0.944 |   0.15  |
|       123 | 4127 |        68.857 |             81.27  |       0.944 |   0.153 |
|       124 | 4127 |        70.58  |             84.525 |       0.941 |   0.165 |
|       125 | 4127 |        69.775 |             83.934 |       0.942 |   0.169 |
|       126 | 4128 |        69.652 |             83.017 |       0.942 |   0.161 |
|       127 | 4128 |        69.16  |             83.1   |       0.943 |   0.168 |
|       128 | 4125 |        70.545 |             85.49  |       0.941 |   0.175 |
|       129 | 4127 |        70.404 |             85.001 |       0.94  |   0.172 |
|       130 | 4127 |        71.675 |             87.091 |       0.938 |   0.177 |
|       131 | 4127 |        71.126 |             85.381 |       0.938 |   0.167 |
|       132 | 4126 |        71.77  |             86.004 |       0.936 |   0.165 |
|       150 | 4128 |        70.06  |             81.954 |       0.942 |   0.145 |
|       151 | 4129 |        67.941 |             79.73  |       0.945 |   0.148 |
|       152 | 4129 |        69.651 |             81.029 |       0.942 |   0.14  |
|       153 | 4129 |        69.747 |             82.269 |       0.941 |   0.152 |
|       154 | 4127 |        68.091 |             78.055 |       0.944 |   0.128 |
|       155 | 4127 |        70.665 |             81.416 |       0.939 |   0.132 |
|       156 | 4127 |        74.451 |             86.341 |       0.931 |   0.138 |
|       157 | 4128 |        70.535 |             82.131 |       0.94  |   0.141 |
|       158 | 4126 |        69.248 |             81.475 |       0.943 |   0.15  |
|       159 | 4127 |        68.208 |             80.773 |       0.945 |   0.156 |
|       160 | 4126 |        70.012 |             83.218 |       0.942 |   0.159 |
|       161 | 4128 |        70.743 |             84.409 |       0.94  |   0.162 |
|       162 | 4128 |        69.642 |             83.811 |       0.942 |   0.169 |
|       163 | 4125 |        69.16  |             83.059 |       0.943 |   0.167 |
|       164 | 4126 |        70.863 |             84.215 |       0.94  |   0.159 |
|       165 | 4127 |        71.294 |             86.091 |       0.939 |   0.172 |
|       166 | 4127 |        72.113 |             88.347 |       0.937 |   0.184 |
|       167 | 4125 |        70.095 |             86.275 |       0.94  |   0.188 |
|       168 | 4126 |        71.893 |             87.651 |       0.936 |   0.18  |
|       187 | 4130 |        70.149 |             81.978 |       0.942 |   0.144 |
|       188 | 4127 |        68.646 |             79.846 |       0.944 |   0.14  |
|       189 | 4128 |        69.224 |             80.071 |       0.943 |   0.135 |
|       190 | 4129 |        69.046 |             80.591 |       0.943 |   0.143 |
|       191 | 4127 |        66.849 |             78.677 |       0.947 |   0.15  |
|       192 | 4127 |        66.516 |             75.92  |       0.947 |   0.124 |
|       193 | 4127 |        67.024 |             76.804 |       0.946 |   0.127 |
|       194 | 4128 |        70.872 |             81.07  |       0.939 |   0.126 |
|       195 | 4128 |        68.63  |             80.08  |       0.944 |   0.143 |
|       196 | 4126 |        65.782 |             76.489 |       0.949 |   0.14  |
|       197 | 4127 |        67.372 |             79.347 |       0.946 |   0.151 |
|       198 | 4126 |        69.711 |             82.643 |       0.942 |   0.156 |
|       200 | 4128 |        69.293 |             81.518 |       0.943 |   0.15  |
|       203 | 4127 |        70.891 |             85.426 |       0.94  |   0.17  |
|       225 | 4129 |        72.089 |             81.815 |       0.939 |   0.119 |
|       226 | 4128 |        70.404 |             81.304 |       0.941 |   0.134 |
|       227 | 4128 |        70.272 |             81.457 |       0.941 |   0.137 |
|       228 | 4127 |        71.221 |             83.243 |       0.938 |   0.144 |
|       229 | 4129 |        71.18  |             82.038 |       0.94  |   0.132 |
|       230 | 4129 |        70.468 |             82.557 |       0.94  |   0.146 |
|       231 | 4127 |        65.836 |             77.484 |       0.948 |   0.15  |
|       232 | 4127 |        67.116 |             77.728 |       0.946 |   0.137 |
|       233 | 4127 |        68.434 |             78.679 |       0.944 |   0.13  |
|       234 | 4128 |        67.693 |             77.907 |       0.945 |   0.131 |
|       235 | 4128 |        67.275 |             78.545 |       0.946 |   0.143 |
|       236 | 4129 |        65.531 |             77.06  |       0.949 |   0.15  |
|       237 | 4127 |        66.701 |             78.147 |       0.947 |   0.146 |
|       271 | 4128 |        73.153 |             83.417 |       0.938 |   0.123 |
|       272 | 4128 |        70.348 |             80.653 |       0.942 |   0.128 |
|       273 | 4128 |        69.192 |             79.37  |       0.943 |   0.128 |
|       274 | 4128 |        69.365 |             81.494 |       0.942 |   0.149 |
|       275 | 4128 |        71.068 |             83.683 |       0.938 |   0.151 |
|       276 | 4128 |        73.636 |             83.722 |       0.934 |   0.12  |
|       277 | 4128 |        68.532 |             78.603 |       0.944 |   0.128 |
|       278 | 4129 |        67.175 |             77.382 |       0.946 |   0.132 |
|       279 | 4127 |        68.05  |             79.343 |       0.944 |   0.142 |
|       280 | 4126 |        68.164 |             80.44  |       0.945 |   0.153 |
|       281 | 4128 |        65.533 |             77.847 |       0.949 |   0.158 |
|       282 | 4128 |        65.515 |             77.661 |       0.949 |   0.156 |
|       283 | 4128 |        65.598 |             78.787 |       0.949 |   0.167 |
|       284 | 4125 |        66.704 |             80.026 |       0.947 |   0.166 |
|       285 | 4126 |        69.19  |             82.863 |       0.943 |   0.165 |
|       319 | 4129 |        75.859 |             86.512 |       0.934 |   0.123 |
|       320 | 4128 |        70.977 |             80.603 |       0.941 |   0.119 |
|       321 | 4129 |        69.963 |             79.815 |       0.942 |   0.123 |
|       322 | 4128 |        68.202 |             78.976 |       0.944 |   0.136 |
|       323 | 4128 |        67.683 |             79.368 |       0.945 |   0.147 |
|       324 | 4128 |        69.806 |             80.027 |       0.941 |   0.128 |
|       325 | 4128 |        69.781 |             79.93  |       0.941 |   0.127 |
|       326 | 4128 |        69.821 |             79.082 |       0.942 |   0.117 |
|       327 | 4128 |        68.162 |             79.205 |       0.945 |   0.139 |
|       328 | 4126 |        67.553 |             80.166 |       0.945 |   0.157 |
|       329 | 4126 |        66.031 |             78.799 |       0.948 |   0.162 |
|       330 | 4128 |        64.97  |             77.263 |       0.95  |   0.159 |
|       331 | 4127 |        64.854 |             77.29  |       0.95  |   0.161 |
|       332 | 4127 |        65.201 |             78.714 |       0.95  |   0.172 |
|       333 | 4125 |        65.388 |             77.737 |       0.949 |   0.159 |
|       334 | 4127 |        66.684 |             79.68  |       0.947 |   0.163 |
|       374 | 4129 |        73.147 |             82.345 |       0.939 |   0.112 |
|       375 | 4129 |        73.223 |             82.491 |       0.937 |   0.112 |
|       376 | 4128 |        69.859 |             79.744 |       0.943 |   0.124 |
|       377 | 4130 |        68.621 |             78.833 |       0.945 |   0.13  |
|       378 | 4129 |        66.5   |             77.575 |       0.948 |   0.143 |
|       379 | 4128 |        66.902 |             77.935 |       0.947 |   0.142 |
|       380 | 4129 |        69.479 |             80.213 |       0.942 |   0.134 |
|       381 | 4127 |        70.271 |             81.188 |       0.941 |   0.134 |
|       382 | 4128 |        67.853 |             79.592 |       0.945 |   0.147 |
|       383 | 4128 |        67.358 |             79.796 |       0.946 |   0.156 |
|       384 | 4126 |        66.966 |             79.476 |       0.946 |   0.157 |
|       385 | 4126 |        67.11  |             80.182 |       0.946 |   0.163 |
|       386 | 4127 |        64.684 |             78.199 |       0.95  |   0.173 |
|       387 | 4127 |        65.826 |             79.912 |       0.949 |   0.176 |
|       388 | 4127 |        65.376 |             80.445 |       0.949 |   0.187 |
|       389 | 4127 |        65.472 |             79.269 |       0.949 |   0.174 |
|       390 | 4127 |        66.629 |             80.977 |       0.947 |   0.177 |
|       430 | 4127 |        73.935 |             82.463 |       0.937 |   0.103 |
|       431 | 4129 |        70.218 |             79.987 |       0.942 |   0.122 |
|       432 | 4128 |        68.712 |             78.776 |       0.945 |   0.128 |
|       433 | 4130 |        67.03  |             77.446 |       0.948 |   0.135 |
|       434 | 4128 |        67.344 |             79.259 |       0.947 |   0.15  |
|       435 | 4128 |        66.617 |             77.677 |       0.948 |   0.142 |
|       436 | 4129 |        69.674 |             82.6   |       0.942 |   0.156 |
|       437 | 4127 |        68.514 |             81.477 |       0.944 |   0.159 |
|       438 | 4128 |        67.554 |             78.956 |       0.946 |   0.144 |
|       439 | 4127 |        65.592 |             77.805 |       0.948 |   0.157 |
|       440 | 4127 |        68.065 |             81.568 |       0.945 |   0.166 |
|       441 | 4126 |        66.716 |             80.096 |       0.947 |   0.167 |
|       442 | 4127 |        66.006 |             79.71  |       0.948 |   0.172 |
|       443 | 4127 |        66.644 |             81.381 |       0.947 |   0.181 |
|       444 | 4127 |        67.345 |             82.558 |       0.946 |   0.184 |
|       445 | 4127 |        66.664 |             80.789 |       0.947 |   0.175 |
|       486 | 4127 |        73.052 |             81.689 |       0.938 |   0.106 |
|       487 | 4128 |        69.232 |             79.215 |       0.944 |   0.126 |
|       488 | 4127 |        66.916 |             76.178 |       0.948 |   0.122 |
|       489 | 4128 |        67.39  |             78.518 |       0.947 |   0.142 |
|       490 | 4128 |        66.869 |             78.507 |       0.948 |   0.148 |
|       491 | 4127 |        68.249 |             79.563 |       0.945 |   0.142 |
|       492 | 4127 |        69.532 |             82.394 |       0.943 |   0.156 |
|       493 | 4127 |        66.235 |             79.247 |       0.948 |   0.164 |
|       494 | 4128 |        65.975 |             78.26  |       0.948 |   0.157 |
|       495 | 4127 |        66.944 |             79.899 |       0.947 |   0.162 |
|       496 | 4126 |        66.201 |             80.526 |       0.948 |   0.178 |
|       497 | 4127 |        66.986 |             80.885 |       0.947 |   0.172 |
|       498 | 4127 |        67.086 |             80.791 |       0.947 |   0.17  |
|       499 | 4127 |        68.165 |             82.426 |       0.945 |   0.173 |
|       500 | 4126 |        68.091 |             83.62  |       0.945 |   0.186 |
|       501 | 4129 |        68.663 |             83.062 |       0.944 |   0.173 |
|       542 | 4129 |        70.507 |             79.785 |       0.942 |   0.116 |
|       543 | 4128 |        68.91  |             79.048 |       0.945 |   0.128 |
|       544 | 4127 |        67.95  |             78.049 |       0.947 |   0.129 |
|       545 | 4128 |        67.144 |             76.975 |       0.948 |   0.128 |
|       546 | 4129 |        66.84  |             76.255 |       0.948 |   0.123 |
|       547 | 4127 |        67.712 |             77.809 |       0.946 |   0.13  |
|       548 | 4126 |        70.305 |             82.616 |       0.941 |   0.149 |
|       549 | 4128 |        68.402 |             82.477 |       0.945 |   0.171 |
|       550 | 4128 |        66.151 |             78.738 |       0.948 |   0.16  |
|       551 | 4127 |        68.238 |             82.943 |       0.945 |   0.177 |
|       552 | 4127 |        66.68  |             80.596 |       0.947 |   0.173 |
|       553 | 4126 |        64.879 |             79.217 |       0.95  |   0.181 |
|       554 | 4127 |        67.763 |             82.132 |       0.946 |   0.175 |
|       555 | 4126 |        69.071 |             85.253 |       0.944 |   0.19  |
|       556 | 4128 |        68.256 |             83.52  |       0.945 |   0.183 |
|       557 | 4127 |        70.919 |             87.133 |       0.94  |   0.186 |
|       601 | 4128 |        73.094 |             81.025 |       0.938 |   0.098 |
|       602 | 4127 |        69.795 |             79.329 |       0.944 |   0.12  |
|       603 | 4127 |        69.319 |             79.999 |       0.944 |   0.133 |
|       604 | 4128 |        70.885 |             82.78  |       0.941 |   0.144 |
|       605 | 4128 |        69.341 |             80.115 |       0.943 |   0.134 |
|       606 | 4126 |        71.074 |             81.008 |       0.939 |   0.123 |
|       607 | 4126 |        74.743 |             86.705 |       0.934 |   0.138 |
|       608 | 4128 |        71.602 |             84.367 |       0.94  |   0.151 |
|       609 | 4127 |        67.402 |             79.838 |       0.946 |   0.156 |
|       610 | 4127 |        68.968 |             82.623 |       0.943 |   0.165 |
|       611 | 4127 |        67.069 |             81.385 |       0.946 |   0.176 |
|       612 | 4127 |        67.813 |             82.017 |       0.945 |   0.173 |
|       613 | 4127 |        67.341 |             81.702 |       0.946 |   0.176 |
|       614 | 4126 |        68.411 |             83.123 |       0.945 |   0.177 |
|       615 | 4128 |        69.902 |             85.602 |       0.943 |   0.183 |
|       616 | 4127 |        70.726 |             87.061 |       0.941 |   0.188 |
|       617 | 4126 |        71.011 |             87.392 |       0.94  |   0.187 |
|       618 | 4126 |        70.871 |             85.765 |       0.939 |   0.174 |
|       661 | 4127 |        71.353 |             81.202 |       0.941 |   0.121 |
|       662 | 4127 |        70.444 |             79.598 |       0.942 |   0.115 |
|       663 | 4128 |        73.754 |             84.002 |       0.936 |   0.122 |
|       664 | 4127 |        76.376 |             86.321 |       0.93  |   0.115 |
|       665 | 4126 |        78.81  |             89.205 |       0.925 |   0.117 |
|       666 | 4126 |        80.66  |             91.552 |       0.922 |   0.119 |
|       667 | 4126 |        75.446 |             87.519 |       0.933 |   0.138 |
|       668 | 4127 |        71.045 |             83.072 |       0.941 |   0.145 |
|       669 | 4126 |        68.511 |             81.322 |       0.944 |   0.158 |
|       670 | 4127 |        67.354 |             82.446 |       0.946 |   0.183 |
|       671 | 4126 |        66.805 |             80.841 |       0.946 |   0.174 |
|       672 | 4126 |        67.321 |             82.013 |       0.946 |   0.179 |
|       673 | 4126 |        69.625 |             84.868 |       0.943 |   0.18  |
|       674 | 4127 |        68.763 |             83.338 |       0.944 |   0.175 |
|       675 | 4127 |        71.993 |             88.045 |       0.939 |   0.182 |
|       676 | 4126 |        71.345 |             87.651 |       0.94  |   0.186 |
|       677 | 4125 |        70.995 |             87.11  |       0.94  |   0.185 |
|       678 | 4125 |        71.394 |             84.487 |       0.938 |   0.155 |
|       719 | 4127 |        71.661 |             82.431 |       0.941 |   0.131 |
|       720 | 4128 |        70.406 |             79.694 |       0.941 |   0.117 |
|       721 | 4126 |        75.06  |             84.846 |       0.933 |   0.115 |
|       722 | 4127 |        81.253 |             91.637 |       0.917 |   0.113 |
|       723 | 4126 |        90.217 |            100.174 |       0.899 |   0.099 |
|       724 | 4126 |        90.55  |            101.113 |       0.899 |   0.104 |
|       725 | 4126 |        84.749 |             95.299 |       0.914 |   0.111 |
|       726 | 4125 |        76.259 |             88.291 |       0.931 |   0.136 |
|       727 | 4126 |        72.813 |             87.032 |       0.936 |   0.163 |
|       728 | 4126 |        70.129 |             85.193 |       0.941 |   0.177 |
|       729 | 4127 |        67.495 |             82.172 |       0.946 |   0.179 |
|       730 | 4125 |        68.436 |             83.825 |       0.945 |   0.184 |
|       731 | 4126 |        69.15  |             83.606 |       0.943 |   0.173 |
|       732 | 4127 |        71.148 |             87.455 |       0.94  |   0.186 |
|       733 | 4127 |        71.027 |             87.552 |       0.941 |   0.189 |
|       734 | 4125 |        71.359 |             87.646 |       0.94  |   0.186 |
|       735 | 4125 |        71.808 |             87.314 |       0.939 |   0.178 |
|       736 | 4125 |        73.526 |             88.549 |       0.936 |   0.17  |
|       776 | 4127 |        73.643 |             85.828 |       0.937 |   0.142 |
|       777 | 4128 |        70.77  |             82.665 |       0.941 |   0.144 |
|       778 | 4127 |        74.39  |             84.371 |       0.931 |   0.118 |
|       779 | 4126 |        88.119 |             96.416 |       0.899 |   0.086 |
|       780 | 4124 |        92.421 |            103.572 |       0.895 |   0.108 |
|       781 | 4126 |        92.919 |            102.992 |       0.894 |   0.098 |
|       782 | 4126 |        90.636 |            101.581 |       0.9   |   0.108 |
|       783 | 4125 |        83.496 |             95.703 |       0.916 |   0.128 |
|       784 | 4126 |        77.704 |             92.081 |       0.927 |   0.156 |
|       785 | 4127 |        71.906 |             87.978 |       0.938 |   0.183 |
|       786 | 4127 |        72.541 |             89.721 |       0.938 |   0.191 |
|       787 | 4124 |        70.708 |             87.285 |       0.941 |   0.19  |
|       788 | 4125 |        72.381 |             88.916 |       0.938 |   0.186 |
|       789 | 4126 |        72.369 |             90.68  |       0.938 |   0.202 |
|       790 | 4126 |        71.37  |             88.84  |       0.94  |   0.197 |
|       791 | 4124 |        72.053 |             89.968 |       0.939 |   0.199 |
|       792 | 4124 |        72.692 |             90.231 |       0.937 |   0.194 |
|       793 | 4126 |        72.859 |             88.623 |       0.937 |   0.178 |
|       832 | 4128 |        75.705 |             86.434 |       0.935 |   0.124 |
|       835 | 4126 |        85.396 |             90.674 |       0.903 |   0.058 |
|       836 | 4123 |        88.117 |             97.262 |       0.906 |   0.094 |
|       837 | 4127 |        90.052 |             99.333 |       0.902 |   0.093 |
|       838 | 4125 |        93.229 |            103.915 |       0.889 |   0.103 |
|       839 | 4126 |        88.673 |            100.587 |       0.903 |   0.118 |
|       840 | 4125 |        80.473 |             94.055 |       0.921 |   0.144 |
|       841 | 4128 |        76.636 |             92.768 |       0.93  |   0.174 |
|       842 | 4127 |        75.411 |             92.236 |       0.933 |   0.182 |
|       843 | 4125 |        75.661 |             93.305 |       0.933 |   0.189 |
|       844 | 4125 |        74.45  |             92.313 |       0.935 |   0.194 |
|       845 | 4126 |        73.204 |             92.356 |       0.937 |   0.207 |
|       846 | 4126 |        71.796 |             90.001 |       0.939 |   0.202 |
|       847 | 4124 |        73.125 |             91.07  |       0.937 |   0.197 |
|       848 | 4125 |        73.855 |             90.768 |       0.935 |   0.186 |
|       849 | 4126 |        73.964 |             90.106 |       0.935 |   0.179 |
|       893 | 4126 |        77.044 |             87.712 |       0.927 |   0.122 |
|       894 | 4125 |        82.653 |             90.906 |       0.912 |   0.091 |
|       895 | 4125 |        91.049 |             98.768 |       0.9   |   0.078 |
|       896 | 4125 |        93.381 |            102.907 |       0.886 |   0.093 |
|       901 | 4125 |        76.563 |             93.561 |       0.932 |   0.182 |
|       902 | 4125 |        75.367 |             93.093 |       0.934 |   0.19  |
|       903 | 4125 |        76.076 |             95.278 |       0.933 |   0.202 |
|       962 | 4126 |        74.304 |             91.043 |       0.936 |   0.184 |

## Top 15 importancias (gain)

|                       |      0 |
|:----------------------|-------:|
| kt_lag1               | 0.5111 |
| kt_last_op            | 0.1381 |
| kt_vecinos_mean_r3    | 0.0955 |
| cloud_op_vecinos_mean | 0.0654 |
| kt_vecinos_mean       | 0.035  |
| kt_vecinos_mean_r2    | 0.0167 |
| frac_nublado_12h      | 0.0056 |
| wind_direction_lag1   | 0.005  |
| kd_difusa_tend        | 0.0049 |
| kt_lag24              | 0.0044 |
| kt_upwind             | 0.0041 |
| pressure_lag1         | 0.0041 |
| cloud_op_media_12h    | 0.0039 |
| temperature_lag1      | 0.0036 |
| cloud_type_lag1       | 0.0036 |
